--- a/locales/ar.json
+++ b/locales/ar.json
@@ -44,8 +44,8 @@
   "urlTemplate": "نموذج URL (استخدم {videoId} أو {videoUrl})",
   "saveButton": "حفظ",
   "resetButton": "إعادة تعيين",
-  "y2mateSettingsSaved": "تم حفظ إعدادات Y2Mate",
-  "y2mateReset": "تم إعادة تعيين Y2Mate إلى الافتراضي",
+  "externalDownloaderSettingsSaved": "تم حفظ إعدادات التنزيل الخارجي",
+  "externalDownloaderReset": "تم إعادة تعيين التنزيل الخارجي إلى الافتراضي",
   "youtubeSettings": "إعدادات YouTube +",
   "takeScreenshot": "التقاط لقطة شاشة",
   "screenshotSaved": "تم حفظ لقطة الشاشة",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "إزالة اقتراحات شاشة النهاية وبطاقات المعلومات/شعار القناة",
   "removedSuffix": " ({n} تمت الإزالة)",
   "scrollToTop": "التمرير إلى الأعلى",
+  "enhancedFeaturesTitle": "ميزات محسّنة",
+  "enhancedFeaturesDesc": "ميزات إنتاجية إضافية وتحسينات في واجهة المستخدم",
+  "enablePlayAllLabel": "زر تشغيل الكل",
+  "enablePlayAllDesc": "إضافة زر تشغيل الكل إلى قوائم التشغيل وصفحات القنوات",
+  "enableResumeTimeLabel": "استئناف التشغيل",
+  "enableResumeTimeDesc": "تذكر موضع الفيديو واقتراح الاستئناف",
+  "enableZoomLabel": "تكبير الفيديو",
+  "enableZoomDesc": "تمكين أدوات التكبير والتحريك لمشغل الفيديو",
+  "enablePlaylistSearchLabel": "بحث في قوائم التشغيل",
+  "enablePlaylistSearchDesc": "إضافة وظيفة البحث إلى لوحات قوائم التشغيل",
+  "scrollToTopButtonLabel": "التمرير إلى الأعلى",
+  "scrollToTopButtonDesc": "عرض زر التمرير إلى الأعلى على الصفحات",
   "resumePlayback": "استئناف التشغيل؟",
   "resume": "استئناف",
   "startOver": "البدء من جديد",
@@ -77,6 +89,9 @@
   "subscribers": "المشتركون",
   "views": "المشاهدات",
   "videos": "الفيديوهات",
+  "info": "الوصف",
+  "playlist": "قائمة التشغيل",
+  "fetching": "جاري التحميل",
   "fontFamily": "عائلة الخط",
   "fontSize": "حجم الخط",
   "updateInterval": "فترة التحديث",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "البحث في {playlist}...",
+  "searchPlaceholderPlaylistPage": "ابحث في هذه القائمة...",
   "shortTitle": "عنوان قصير (سطر واحد)",
   "emailOptional": "بريدك الإلكتروني (اختياري)",
   "descriptionPlaceholder": "وصف المشكلة، خطوات إعادة الإنتاج، المتوقع مقابل الفعلي",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "لا يمكن تحرير فصول YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "أنماط وميزات محسّنة لـ YouTube Music",
-  "musicStylesLabel": "أنماط YouTube Music",
-  "musicStylesDesc": "تمكين أنماط YouTube Music المحسّنة (تجريبي)",
-  "musicEnhancementsLabel": "تحسينات Music",
-  "musicEnhancementsDesc": "تمكين جميع تحسينات YouTube Music",
   "immersiveSearchLabel": "بحث غامر",
   "immersiveSearchDesc": "تجربة بحث غامرة متمركزة عند التركيز",
   "sidebarHoverLabel": "تأثيرات التمرير على الشريط الجانبي",
   "sidebarHoverDesc": "إظهار الشريط الجانبي عند التمرير مع رسوم متحركة سلسة",
+  "playerSidebarStylesLabel": "لوحة جانبية للمشغل",
+  "playerSidebarStylesDesc": "تحسين تخطيط السلوك للوحة الجانبية للمشغل",
+  "playerBarStylesLabel": "تنسيق شريط المشغل",
+  "playerBarStylesDesc": "تحسين مظهر شريط المشغل السفلي",
+  "centeredPlayerBarStylesLabel": "شريط مشغل مركزي",
+  "centeredPlayerBarStylesDesc": "إعادة وضع وتمركز عناصر التحكم في المشغل",
+  "miniPlayerStylesLabel": "مشغل صغير",
+  "miniPlayerStylesDesc": "تمكين تعديلات تخطيط مشغل صغير",
   "centeredPlayerLabel": "تخطيط المشغل المركزي",
   "centeredPlayerDesc": "مركزة المشغل مع تصميم محسّن",
   "scrollToTopLabel": "زر التمرير إلى الأعلى",
   "scrollToTopDesc": "إظهار زر التمرير إلى الأعلى في اللوحة الجانبية",
-  "musicSettingsSaved": "تم حفظ إعدادات YouTube Music"
+  "musicSettingsSaved": "تم حفظ إعدادات YouTube Music",
+  "zenStylesTitle": "أنماط زن",
+  "zenStylesDesc": "أنماط بصرية محسنة لتجربة YouTube أنظف",
+  "zenStyleThumbnailHoverLabel": "معاينة الصورة المصغرة عند التمرير",
+  "zenStyleThumbnailHoverDesc": "تكبير مشغل المعاينة المضمن عند التمرير",
+  "zenStyleImmersiveSearchLabel": "بحث غامر",
+  "zenStyleImmersiveSearchDesc": "تجربة مربع بحث متمركز عند التركيز",
+  "zenStyleHideVoiceSearchLabel": "إخفاء البحث الصوتي",
+  "zenStyleHideVoiceSearchDesc": "إزالة زر البحث الصوتي من الرأس",
+  "zenStyleTransparentHeaderLabel": "رأس شفاف",
+  "zenStyleTransparentHeaderDesc": "جعل خلفية الرأس العلوي شفافة",
+  "zenStyleHideSideGuideLabel": "إخفاء الدليل الجانبي",
+  "zenStyleHideSideGuideDesc": "إخفاء الشريط الجانبي بالكامل",
+  "zenStyleCleanSideGuideLabel": "دليل جانبي نظيف",
+  "zenStyleCleanSideGuideDesc": "إزالة Premium/الرياضة/الإعدادات من الشريط الجانبي",
+  "zenStyleFixFeedLayoutLabel": "إصلاح تخطيط الخلاصة",
+  "zenStyleFixFeedLayoutDesc": "تحسين تخطيط شبكة الفيديو على الصفحة الرئيسية",
+  "zenStyleBetterCaptionsLabel": "ترجمات أفضل",
+  "zenStyleBetterCaptionsDesc": "تصميم ترجمات محسن مع خلفية ضبابية",
+  "zenStylePlayerBlurLabel": "تمويه عناصر التحكم في المشغل",
+  "zenStylePlayerBlurDesc": "إضافة تأثير ضبابي لعناصر التحكم في المشغل"
 }
