--- a/locales/cn.json
+++ b/locales/cn.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL 模板（使用 {videoId} 或 {videoUrl}）",
   "saveButton": "保存",
   "resetButton": "重置",
-  "y2mateSettingsSaved": "Y2Mate 设置已保存",
-  "y2mateReset": "Y2Mate 已重置为默认值",
+  "externalDownloaderSettingsSaved": "外部下载器设置已保存",
+  "externalDownloaderReset": "外部下载器已重置为默认值",
   "youtubeSettings": "YouTube + 设置",
   "takeScreenshot": "截取屏幕截图",
   "screenshotSaved": "截图已保存",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "移除片尾屏幕建议和信息卡片/频道徽标",
   "removedSuffix": "（已移除 {n} 个）",
   "scrollToTop": "滚动到顶部",
+  "enhancedFeaturesTitle": "增强功能",
+  "enhancedFeaturesDesc": "额外的生产力功能和界面增强",
+  "enablePlayAllLabel": "全部播放按钮",
+  "enablePlayAllDesc": "在播放列表和频道页面添加全部播放按钮",
+  "enableResumeTimeLabel": "恢复播放",
+  "enableResumeTimeDesc": "记住视频位置并提供恢复选项",
+  "enableZoomLabel": "视频缩放",
+  "enableZoomDesc": "为视频播放器启用缩放和平移控制",
+  "enablePlaylistSearchLabel": "播放列表搜索",
+  "enablePlaylistSearchDesc": "为播放列表面板添加搜索功能",
+  "scrollToTopButtonLabel": "滚动到顶部按钮",
+  "scrollToTopButtonDesc": "在页面上显示滚动到顶部按钮",
   "resumePlayback": "恢复播放？",
   "resume": "恢复",
   "startOver": "重新开始",
@@ -77,6 +89,9 @@
   "subscribers": "订阅者",
   "views": "观看次数",
   "videos": "视频",
+  "info": "信息",
+  "playlist": "播放列表",
+  "fetching": "获取中",
   "fontFamily": "字体",
   "fontSize": "字体大小",
   "updateInterval": "更新间隔",
@@ -160,6 +175,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "在 {playlist} 中搜索...",
+  "searchPlaceholderPlaylistPage": "在此播放列表中搜索...",
   "shortTitle": "简短标题（一行）",
   "emailOptional": "您的电子邮件（可选）",
   "descriptionPlaceholder": "描述问题、重现步骤、预期与实际结果",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "无法编辑 YouTube 章节",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music 的增强样式和功能",
-  "musicStylesLabel": "YouTube Music 样式",
-  "musicStylesDesc": "启用增强的 YouTube Music 样式（实验性）",
-  "musicEnhancementsLabel": "音乐增强",
-  "musicEnhancementsDesc": "启用所有 YouTube Music 增强功能",
   "immersiveSearchLabel": "沉浸式搜索",
   "immersiveSearchDesc": "聚焦时的居中沉浸式搜索体验",
   "sidebarHoverLabel": "侧边栏悬停效果",
   "sidebarHoverDesc": "悬停时显示侧边栏，带有平滑动画",
+  "playerSidebarStylesLabel": "播放器侧边面板",
+  "playerSidebarStylesDesc": "增强播放器侧边面板的布局和行为",
+  "playerBarStylesLabel": "播放器底部样式",
+  "playerBarStylesDesc": "改善底部播放器条的外观",
+  "centeredPlayerBarStylesLabel": "居中播放器控制条",
+  "centeredPlayerBarStylesDesc": "重新定位并居中播放器控制项",
+  "miniPlayerStylesLabel": "迷你播放器",
+  "miniPlayerStylesDesc": "启用迷你播放器的布局调整",
   "centeredPlayerLabel": "居中播放器布局",
   "centeredPlayerDesc": "使用增强样式居中播放器",
   "scrollToTopLabel": "返回顶部按钮",
   "scrollToTopDesc": "在侧面板显示返回顶部按钮",
-  "musicSettingsSaved": "YouTube Music 设置已保存"
+  "musicSettingsSaved": "YouTube Music 设置已保存",
+  "zenStylesTitle": "禅意样式",
+  "zenStylesDesc": "增强的视觉样式，打造更简洁的 YouTube 体验",
+  "zenStyleThumbnailHoverLabel": "缩略图悬停预览",
+  "zenStyleThumbnailHoverDesc": "悬停时放大内联预览播放器",
+  "zenStyleImmersiveSearchLabel": "沉浸式搜索",
+  "zenStyleImmersiveSearchDesc": "聚焦时居中搜索框体验",
+  "zenStyleHideVoiceSearchLabel": "隐藏语音搜索",
+  "zenStyleHideVoiceSearchDesc": "从顶部栏移除语音搜索按钮",
+  "zenStyleTransparentHeaderLabel": "透明顶栏",
+  "zenStyleTransparentHeaderDesc": "使顶部栏背景透明",
+  "zenStyleHideSideGuideLabel": "隐藏侧边栏",
+  "zenStyleHideSideGuideDesc": "完全隐藏侧边栏导航",
+  "zenStyleCleanSideGuideLabel": "简洁侧边栏",
+  "zenStyleCleanSideGuideDesc": "从侧边栏移除会员/体育/设置",
+  "zenStyleFixFeedLayoutLabel": "修复主页布局",
+  "zenStyleFixFeedLayoutDesc": "改进主页视频网格布局",
+  "zenStyleBetterCaptionsLabel": "更好的字幕",
+  "zenStyleBetterCaptionsDesc": "增强字幕样式，添加模糊背景",
+  "zenStylePlayerBlurLabel": "播放器控件模糊",
+  "zenStylePlayerBlurDesc": "为播放器控件添加模糊效果"
 }
