--- a/locales/de.json
+++ b/locales/de.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL-Vorlage (verwende {videoId} oder {videoUrl})",
   "saveButton": "Speichern",
   "resetButton": "Zurücksetzen",
-  "y2mateSettingsSaved": "Y2Mate-Einstellungen gespeichert",
-  "y2mateReset": "Y2Mate auf Standardwerte zurückgesetzt",
+  "externalDownloaderSettingsSaved": "Externe Downloader-Einstellungen gespeichert",
+  "externalDownloaderReset": "Externe Downloader auf Standardwerte zurückgesetzt",
   "youtubeSettings": "YouTube + Einstellungen",
   "takeScreenshot": "Screenshot aufnehmen",
   "screenshotSaved": "Screenshot gespeichert",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Endbildschirmvorschläge und Info-Karten/Kanallogo entfernen",
   "removedSuffix": " ({n} entfernt)",
   "scrollToTop": "Nach oben scrollen",
+  "enhancedFeaturesTitle": "Erweiterte Funktionen",
+  "enhancedFeaturesDesc": "Zusätzliche Produktivitätsfunktionen und UI-Verbesserungen",
+  "enablePlayAllLabel": "Alle abspielen-Schaltfläche",
+  "enablePlayAllDesc": "Schaltfläche „Alle abspielen“ zu Wiedergabelisten und Kanalseiten hinzufügen",
+  "enableResumeTimeLabel": "Wiedergabe fortsetzen",
+  "enableResumeTimeDesc": "Videoposition merken und Wiedergabe-Fortsetzung anbieten",
+  "enableZoomLabel": "Video-Zoom",
+  "enableZoomDesc": "Zoom- und Schwenksteuerung für den Videoplayer aktivieren",
+  "enablePlaylistSearchLabel": "Wiedergabelisten-Suche",
+  "enablePlaylistSearchDesc": "Suchfunktionalität zu Wiedergabelisten-Panels hinzufügen",
+  "scrollToTopButtonLabel": "Nach oben scrollen",
+  "scrollToTopButtonDesc": "Schaltfläche zum Nach-oben-Scrollen auf Seiten anzeigen",
   "resumePlayback": "Wiedergabe fortsetzen?",
   "resume": "Fortsetzen",
   "startOver": "Von vorne beginnen",
@@ -77,6 +89,9 @@
   "subscribers": "Abonnenten",
   "views": "Aufrufe",
   "videos": "Videos",
+  "info": "Info",
+  "playlist": "Playlist",
+  "fetching": "Wird abgerufen...",
   "fontFamily": "Schriftfamilie",
   "fontSize": "Schriftgröße",
   "updateInterval": "Aktualisierungsintervall",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "In {playlist} suchen...",
+  "searchPlaceholderPlaylistPage": "In dieser Playlist suchen...",
   "shortTitle": "Kurzer Titel (eine Zeile)",
   "emailOptional": "Ihre E-Mail (optional)",
   "descriptionPlaceholder": "Beschreiben Sie das Problem, Schritte zur Reproduktion, erwartet vs. tatsächlich",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "YouTube-Kapitel können nicht bearbeitet werden",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Verbesserte Stile und Funktionen für YouTube Music",
-  "musicStylesLabel": "YouTube Music-Stile",
-  "musicStylesDesc": "Verbesserte YouTube Music-Stile aktivieren (experimentell)",
-  "musicEnhancementsLabel": "Music-Verbesserungen",
-  "musicEnhancementsDesc": "Alle YouTube Music-Verbesserungen aktivieren",
   "immersiveSearchLabel": "Immersive Suche",
   "immersiveSearchDesc": "Zentrierte immersive Sucherfahrung bei Fokus",
   "sidebarHoverLabel": "Seitenleisten-Hover-Effekte",
   "sidebarHoverDesc": "Seitenleiste beim Überfahren mit sanften Animationen anzeigen",
+  "playerSidebarStylesLabel": "Player-Seitenleiste",
+  "playerSidebarStylesDesc": "Layout und Verhalten des Player-Seitenbereichs verbessern",
+  "playerBarStylesLabel": "Player-Leisten-Styling",
+  "playerBarStylesDesc": "Aussehen der unteren Player-Leiste verbessern",
+  "centeredPlayerBarStylesLabel": "Zentrierte Player-Leiste",
+  "centeredPlayerBarStylesDesc": "Player-Leisten-Steuerelemente neu positionieren und zentrieren",
+  "miniPlayerStylesLabel": "Mini-Player",
+  "miniPlayerStylesDesc": "Layoutanpassungen für den Mini-Player aktivieren",
   "centeredPlayerLabel": "Zentriertes Player-Layout",
   "centeredPlayerDesc": "Player mit verbessertem Styling zentrieren",
   "scrollToTopLabel": "Nach-oben-scrollen-Taste",
   "scrollToTopDesc": "Nach-oben-scrollen-Taste im Seitenpanel anzeigen",
-  "musicSettingsSaved": "YouTube Music-Einstellungen gespeichert"
+  "musicSettingsSaved": "YouTube Music-Einstellungen gespeichert",
+  "zenStylesTitle": "Zen-Stile",
+  "zenStylesDesc": "Verbesserte visuelle Stile für ein saubereres YouTube-Erlebnis",
+  "zenStyleThumbnailHoverLabel": "Miniaturansicht Hover-Vorschau",
+  "zenStyleThumbnailHoverDesc": "Inline-Vorschau-Player beim Überfahren vergrößern",
+  "zenStyleImmersiveSearchLabel": "Immersive Suche",
+  "zenStyleImmersiveSearchDesc": "Zentrierte Suchfeld-Erfahrung bei Fokus",
+  "zenStyleHideVoiceSearchLabel": "Sprachsuche ausblenden",
+  "zenStyleHideVoiceSearchDesc": "Sprachsuche-Schaltfläche aus Header entfernen",
+  "zenStyleTransparentHeaderLabel": "Transparenter Header",
+  "zenStyleTransparentHeaderDesc": "Oberen Header-Hintergrund transparent machen",
+  "zenStyleHideSideGuideLabel": "Seitenleiste ausblenden",
+  "zenStyleHideSideGuideDesc": "Seitenleiste vollständig ausblenden",
+  "zenStyleCleanSideGuideLabel": "Saubere Seitenleiste",
+  "zenStyleCleanSideGuideDesc": "Premium/Sport/Einstellungen aus Seitenleiste entfernen",
+  "zenStyleFixFeedLayoutLabel": "Feed-Layout korrigieren",
+  "zenStyleFixFeedLayoutDesc": "Video-Rasterlayout auf der Startseite verbessern",
+  "zenStyleBetterCaptionsLabel": "Bessere Untertitel",
+  "zenStyleBetterCaptionsDesc": "Verbessertes Untertitel-Styling mit Unschärfe-Hintergrund",
+  "zenStylePlayerBlurLabel": "Player-Steuerung Unschärfe",
+  "zenStylePlayerBlurDesc": "Unschärfe-Effekt zu Player-Steuerelementen hinzufügen"
 }
