--- a/locales/du.json
+++ b/locales/du.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL-sjabloon (gebruik {videoId} of {videoUrl})",
   "saveButton": "Opslaan",
   "resetButton": "Resetten",
-  "y2mateSettingsSaved": "Y2Mate-instellingen opgeslagen",
-  "y2mateReset": "Y2Mate gereset naar standaardinstellingen",
+  "externalDownloaderSettingsSaved": "Externe downloader-instellingen opgeslagen",
+  "externalDownloaderReset": "Externe downloader gereset naar standaardinstellingen",
   "youtubeSettings": "YouTube + Instellingen",
   "takeScreenshot": "Schermafbeelding maken",
   "screenshotSaved": "Schermafbeelding opgeslagen",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Verwijder eindschermsuggesties en infokaarten/kanaallogo",
   "removedSuffix": " ({n} verwijderd)",
   "scrollToTop": "Naar boven scrollen",
+  "enhancedFeaturesTitle": "Verbeterde functies",
+  "enhancedFeaturesDesc": "Extra productiviteitsfuncties en UI-verbeteringen",
+  "enablePlayAllLabel": "Alles afspelen-knop",
+  "enablePlayAllDesc": "Voeg een Alles afspelen-knop toe aan afspeellijsten en kanaalpagina's",
+  "enableResumeTimeLabel": "Afspelen hervatten",
+  "enableResumeTimeDesc": "Onthoud videopositie en bied aan om verder te gaan",
+  "enableZoomLabel": "Videozoom",
+  "enableZoomDesc": "Schakel zoom- en panbesturing in voor de videospeler",
+  "enablePlaylistSearchLabel": "Afspeellijst-zoekfunctie",
+  "enablePlaylistSearchDesc": "Voeg zoekfunctionaliteit toe aan afspeellijstpanelen",
+  "scrollToTopButtonLabel": "Scroll naar boven",
+  "scrollToTopButtonDesc": "Toon scroll-naar-boven knop op pagina's",
   "resumePlayback": "Afspelen hervatten?",
   "resume": "Hervatten",
   "startOver": "Opnieuw beginnen",
@@ -76,6 +88,9 @@
   "subscribers": "Abonnees",
   "views": "Weergaven",
   "videos": "Video's",
+  "info": "Info",
+  "playlist": "Afspeellijst",
+  "fetching": "Ophalen",
   "fontFamily": "Lettertype",
   "fontSize": "Lettergrootte",
   "updateInterval": "Update-interval",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Zoeken in {playlist}...",
+  "searchPlaceholderPlaylistPage": "Zoeken in deze afspeellijst...",
   "shortTitle": "Korte titel (één regel)",
   "emailOptional": "Je e-mailadres (optioneel)",
   "descriptionPlaceholder": "Beschrijf het probleem, stappen om te reproduceren, verwacht vs werkelijk",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Kan YouTube-hoofdstukken niet bewerken",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Verbeterde stijlen en functies voor YouTube Music",
-  "musicStylesLabel": "YouTube Music Stijlen",
-  "musicStylesDesc": "Schakel verbeterde YouTube Music stijlen in (experimenteel)",
-  "musicEnhancementsLabel": "Muziek verbeteringen",
-  "musicEnhancementsDesc": "Schakel alle YouTube Music verbeteringen in",
   "immersiveSearchLabel": "Meeslepende zoeken",
   "immersiveSearchDesc": "Gecentreerde meeslepende zoekervaring bij focus",
   "sidebarHoverLabel": "Zijbalk hover effecten",
   "sidebarHoverDesc": "Toon zijbalk bij hover met vloeiende animaties",
+  "playerSidebarStylesLabel": "Player Side Panel",
+  "playerSidebarStylesDesc": "Enhance the player side panel layout and behavior",
+  "playerBarStylesLabel": "Player Bar Styling",
+  "playerBarStylesDesc": "Improve the bottom player bar appearance",
+  "centeredPlayerBarStylesLabel": "Centered Player Bar",
+  "centeredPlayerBarStylesDesc": "Reposition and center player bar controls",
+  "miniPlayerStylesLabel": "Mini Player",
+  "miniPlayerStylesDesc": "Enable mini-player layout tweaks",
   "centeredPlayerLabel": "Gecentreerde speler lay-out",
   "centeredPlayerDesc": "Centreer de speler met verbeterde stijl",
   "scrollToTopLabel": "Scroll naar boven knop",
   "scrollToTopDesc": "Toon scroll naar boven knop in zijpaneel",
-  "musicSettingsSaved": "YouTube Music instellingen opgeslagen"
+  "musicSettingsSaved": "YouTube Music-instellingen opgeslagen",
+  "zenStylesTitle": "Zen-stijlen",
+  "zenStylesDesc": "Verbeterde visuele stijlen voor een schonere YouTube-ervaring",
+  "zenStyleThumbnailHoverLabel": "Miniatuurvoorbeeld bij Hover",
+  "zenStyleThumbnailHoverDesc": "Vergroot inline voorbeeldspeler bij hover",
+  "zenStyleImmersiveSearchLabel": "Meeslepend Zoeken",
+  "zenStyleImmersiveSearchDesc": "Gecentreerde zoekbalk-ervaring bij focus",
+  "zenStyleHideVoiceSearchLabel": "Verberg Spraakzoeken",
+  "zenStyleHideVoiceSearchDesc": "Verwijder spraakzoekknop uit header",
+  "zenStyleTransparentHeaderLabel": "Transparante Header",
+  "zenStyleTransparentHeaderDesc": "Maak de bovenste header-achtergrond transparant",
+  "zenStyleHideSideGuideLabel": "Verberg Zijbalk",
+  "zenStyleHideSideGuideDesc": "Verberg de zijbalk volledig",
+  "zenStyleCleanSideGuideLabel": "Schone Zijbalk",
+  "zenStyleCleanSideGuideDesc": "Verwijder Premium/Sport/Instellingen uit zijbalk",
+  "zenStyleFixFeedLayoutLabel": "Feed-indeling Corrigeren",
+  "zenStyleFixFeedLayoutDesc": "Verbeter video-rasterindeling op startpagina",
+  "zenStyleBetterCaptionsLabel": "Betere Ondertitels",
+  "zenStyleBetterCaptionsDesc": "Verbeterde ondertitelstijl met vervagingsachtergrond",
+  "zenStylePlayerBlurLabel": "Speler Bedieningselementen Vervagen",
+  "zenStylePlayerBlurDesc": "Voeg vervagingseffect toe aan speler bedieningselementen"
 }
