--- a/locales/en.json
+++ b/locales/en.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL template (use {videoId} or {videoUrl})",
   "saveButton": "Save",
   "resetButton": "Reset",
-  "y2mateSettingsSaved": "Y2Mate settings saved",
-  "y2mateReset": "Y2Mate reset to defaults",
+  "externalDownloaderSettingsSaved": "External downloader settings saved",
+  "externalDownloaderReset": "External downloader reset to defaults",
   "youtubeSettings": "YouTube + Settings",
   "takeScreenshot": "Take screenshot",
   "screenshotSaved": "Screenshot saved",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Remove end screen suggestions and info cards/channel logo",
   "removedSuffix": " ({n} removed)",
   "scrollToTop": "Scroll to top",
+  "enhancedFeaturesTitle": "Enhanced Features",
+  "enhancedFeaturesDesc": "Additional productivity features and UI enhancements",
+  "enablePlayAllLabel": "Play All Button",
+  "enablePlayAllDesc": "Add Play All button to playlists and channel pages",
+  "enableResumeTimeLabel": "Resume Playback",
+  "enableResumeTimeDesc": "Remember video position and offer to resume",
+  "enableZoomLabel": "Video Zoom",
+  "enableZoomDesc": "Enable zoom and pan controls for video player",
+  "enablePlaylistSearchLabel": "Playlist Search",
+  "enablePlaylistSearchDesc": "Add search functionality to playlist panels",
+  "scrollToTopButtonLabel": "Scroll to Top",
+  "scrollToTopButtonDesc": "Show scroll-to-top button on pages",
   "resumePlayback": "Resume playback?",
   "resume": "Resume",
   "startOver": "Start over",
@@ -77,6 +89,9 @@
   "subscribers": "Subscribers",
   "views": "Views",
   "videos": "Videos",
+  "info": "Info",
+  "playlist": "Playlist",
+  "fetching": "Fetching",
   "fontFamily": "Font Family",
   "fontSize": "Font Size",
   "updateInterval": "Update Interval",
@@ -154,13 +169,14 @@
   "captionsUnavailable": "Subtitles unavailable",
   "pipTitle": "Picture-in-Picture",
   "pipDescription": "Add Picture-in-Picture functionality with keyboard shortcut",
-  "pipShortcutTitle": "PiP Keyboard Shortcut",
-  "pipShortcutDescription": "Customize keyboard combination to toggle PiP mode",
+  "pipShortcutTitle": "Picture-in-Picture (PiP) Keyboard Shortcut",
+  "pipShortcutDescription": "Customize keyboard combination to toggle Picture-in-Picture (PiP) mode",
   "none": "None",
   "ctrl": "Ctrl",
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Search in {playlist}...",
+  "searchPlaceholderPlaylistPage": "Search this playlist...",
   "shortTitle": "Short title (one line)",
   "emailOptional": "Your email (optional)",
   "descriptionPlaceholder": "Describe the issue, steps to reproduce, expected vs actual",
@@ -225,19 +241,43 @@
   "confirmDelete": "Delete timecode \"{label}\"?",
   "reloadError": "Error reloading timecodes",
   "cannotEditChapter": "Cannot edit YouTube chapters",
-  "youtubeMusicTitle": "YouTube Music",
-  "youtubeMusicDesc": "Enhanced styles and features for YouTube Music",
-  "musicStylesLabel": "YouTube Music Styles",
-  "musicStylesDesc": "Enable enhanced YouTube Music styles (experimental)",
-  "musicEnhancementsLabel": "Music Enhancements",
-  "musicEnhancementsDesc": "Enable all YouTube Music enhancements",
+  "youtubeMusicTitle": "YouTube Music +",
+  "youtubeMusicDesc": "Enhanced styles and features for YouTube Music (experimental)",
   "immersiveSearchLabel": "Immersive Search",
   "immersiveSearchDesc": "Centered immersive search experience when focused",
   "sidebarHoverLabel": "Sidebar Hover Effects",
   "sidebarHoverDesc": "Show sidebar on hover with smooth animations",
+  "playerSidebarStylesLabel": "Player Side Panel",
+  "playerSidebarStylesDesc": "Enhance the player side panel layout and behavior",
   "centeredPlayerLabel": "Centered Player Layout",
   "centeredPlayerDesc": "Center the player with enhanced styling",
+  "playerBarStylesLabel": "Player Bar Styling",
+  "playerBarStylesDesc": "Improve the bottom player bar appearance",
+  "centeredPlayerBarStylesLabel": "Centered Player Bar",
+  "centeredPlayerBarStylesDesc": "Reposition and center player bar controls",
+  "miniPlayerStylesLabel": "Mini Player",
+  "miniPlayerStylesDesc": "Enable mini-player layout tweaks",
   "scrollToTopLabel": "Scroll to Top Button",
   "scrollToTopDesc": "Show scroll to top button in side panel",
-  "musicSettingsSaved": "YouTube Music settings saved"
+  "musicSettingsSaved": "YouTube Music settings saved",
+  "zenStylesTitle": "Zen Styles",
+  "zenStylesDesc": "Enhanced visual styles for a cleaner YouTube experience",
+  "zenStyleThumbnailHoverLabel": "Thumbnail Hover Preview",
+  "zenStyleThumbnailHoverDesc": "Enlarge inline preview player on hover",
+  "zenStyleImmersiveSearchLabel": "Immersive Search",
+  "zenStyleImmersiveSearchDesc": "Centered searchbox experience when focused",
+  "zenStyleHideVoiceSearchLabel": "Hide Voice Search",
+  "zenStyleHideVoiceSearchDesc": "Remove voice search button from header",
+  "zenStyleTransparentHeaderLabel": "Transparent Header",
+  "zenStyleTransparentHeaderDesc": "Make the top header background transparent",
+  "zenStyleHideSideGuideLabel": "Hide Side Guide",
+  "zenStyleHideSideGuideDesc": "Completely hide the sidebar guide",
+  "zenStyleCleanSideGuideLabel": "Clean Side Guide",
+  "zenStyleCleanSideGuideDesc": "Remove Premium/Sports/Settings from sidebar",
+  "zenStyleFixFeedLayoutLabel": "Fix Feed Layout",
+  "zenStyleFixFeedLayoutDesc": "Improve video grid layout on home page",
+  "zenStyleBetterCaptionsLabel": "Better Captions",
+  "zenStyleBetterCaptionsDesc": "Enhanced subtitle styling with blur backdrop",
+  "zenStylePlayerBlurLabel": "Player Controls Blur",
+  "zenStylePlayerBlurDesc": "Add blur effect to player controls"
 }
