--- a/locales/es.json
+++ b/locales/es.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Plantilla de URL (usar {videoId} o {videoUrl})",
   "saveButton": "Guardar",
   "resetButton": "Restablecer",
-  "y2mateSettingsSaved": "Configuración de Y2Mate guardada",
-  "y2mateReset": "Y2Mate restablecido a valores predeterminados",
+  "externalDownloaderSettingsSaved": "Configuración del descargador externo guardada",
+  "externalDownloaderReset": "Descargador externo restablecido a valores predeterminados",
   "youtubeSettings": "Configuración de YouTube +",
   "takeScreenshot": "Capturar pantalla",
   "screenshotSaved": "Captura guardada",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Eliminar sugerencias de pantalla final y tarjetas de información/logo del canal",
   "removedSuffix": " ({n} eliminados)",
   "scrollToTop": "Desplazarse al inicio",
+  "enhancedFeaturesTitle": "Funciones mejoradas",
+  "enhancedFeaturesDesc": "Funciones adicionales de productividad y mejoras de la interfaz",
+  "enablePlayAllLabel": "Botón Reproducir todo",
+  "enablePlayAllDesc": "Agregar botón Reproducir todo a listas de reproducción y páginas de canales",
+  "enableResumeTimeLabel": "Reanudar reproducción",
+  "enableResumeTimeDesc": "Recordar la posición del video y ofrecer reanudar",
+  "enableZoomLabel": "Zoom de video",
+  "enableZoomDesc": "Habilitar controles de zoom y paneo para el reproductor de video",
+  "enablePlaylistSearchLabel": "Búsqueda de listas de reproducción",
+  "enablePlaylistSearchDesc": "Agregar funcionalidad de búsqueda a los paneles de listas de reproducción",
+  "scrollToTopButtonLabel": "Botón de desplazamiento al inicio",
+  "scrollToTopButtonDesc": "Mostrar botón para desplazarse al inicio en las páginas",
   "resumePlayback": "¿Reanudar reproducción?",
   "resume": "Reanudar",
   "startOver": "Comenzar de nuevo",
@@ -77,6 +89,9 @@
   "subscribers": "Suscriptores",
   "views": "Vistas",
   "videos": "Videos",
+  "info": "Descripción",
+  "playlist": "Lista de reproducción",
+  "fetching": "Obteniendo...",
   "fontFamily": "Familia de fuente",
   "fontSize": "Tamaño de fuente",
   "updateInterval": "Intervalo de actualización",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Buscar en {playlist}...",
+  "searchPlaceholderPlaylistPage": "Buscar en esta lista de reproducción...",
   "shortTitle": "Título corto (una línea)",
   "emailOptional": "Tu correo electrónico (opcional)",
   "descriptionPlaceholder": "Describe el problema, pasos para reproducir, esperado vs real",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "No se pueden editar capítulos de YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Estilos y funciones mejoradas para YouTube Music",
-  "musicStylesLabel": "Estilos de YouTube Music",
-  "musicStylesDesc": "Habilitar estilos mejorados de YouTube Music (experimental)",
-  "musicEnhancementsLabel": "Mejoras de Music",
-  "musicEnhancementsDesc": "Habilitar todas las mejoras de YouTube Music",
   "immersiveSearchLabel": "Búsqueda inmersiva",
   "immersiveSearchDesc": "Experiencia de búsqueda inmersiva centrada cuando está enfocada",
   "sidebarHoverLabel": "Efectos de hover en la barra lateral",
   "sidebarHoverDesc": "Mostrar barra lateral al pasar el cursor con animaciones suaves",
+  "playerSidebarStylesLabel": "Panel lateral del reproductor",
+  "playerSidebarStylesDesc": "Mejorar el diseño y el comportamiento del panel lateral del reproductor",
+  "playerBarStylesLabel": "Estilo de la barra del reproductor",
+  "playerBarStylesDesc": "Mejorar la apariencia de la barra inferior del reproductor",
+  "centeredPlayerBarStylesLabel": "Barra del reproductor centrada",
+  "centeredPlayerBarStylesDesc": "Reubicar y centrar los controles de la barra del reproductor",
+  "miniPlayerStylesLabel": "Mini reproductor",
+  "miniPlayerStylesDesc": "Habilitar ajustes de diseño para el mini reproductor",
   "centeredPlayerLabel": "Diseño de reproductor centrado",
   "centeredPlayerDesc": "Centrar el reproductor con estilo mejorado",
   "scrollToTopLabel": "Botón de desplazamiento al inicio",
   "scrollToTopDesc": "Mostrar botón de desplazamiento al inicio en el panel lateral",
-  "musicSettingsSaved": "Configuración de YouTube Music guardada"
+  "musicSettingsSaved": "Configuración de YouTube Music guardada",
+  "zenStylesTitle": "Estilos Zen",
+  "zenStylesDesc": "Estilos visuales mejorados para una experiencia de YouTube más limpia",
+  "zenStyleThumbnailHoverLabel": "Vista Previa al Pasar el Ratón",
+  "zenStyleThumbnailHoverDesc": "Ampliar reproductor de vista previa en línea al pasar el ratón",
+  "zenStyleImmersiveSearchLabel": "Búsqueda Inmersiva",
+  "zenStyleImmersiveSearchDesc": "Experiencia de cuadro de búsqueda centrado al enfocar",
+  "zenStyleHideVoiceSearchLabel": "Ocultar Búsqueda por Voz",
+  "zenStyleHideVoiceSearchDesc": "Eliminar botón de búsqueda por voz del encabezado",
+  "zenStyleTransparentHeaderLabel": "Encabezado Transparente",
+  "zenStyleTransparentHeaderDesc": "Hacer transparente el fondo del encabezado superior",
+  "zenStyleHideSideGuideLabel": "Ocultar Barra Lateral",
+  "zenStyleHideSideGuideDesc": "Ocultar completamente la barra lateral",
+  "zenStyleCleanSideGuideLabel": "Barra Lateral Limpia",
+  "zenStyleCleanSideGuideDesc": "Eliminar Premium/Deportes/Configuración de la barra lateral",
+  "zenStyleFixFeedLayoutLabel": "Corregir Diseño de Feed",
+  "zenStyleFixFeedLayoutDesc": "Mejorar diseño de cuadrícula de videos en la página de inicio",
+  "zenStyleBetterCaptionsLabel": "Mejores Subtítulos",
+  "zenStyleBetterCaptionsDesc": "Estilo de subtítulos mejorado con fondo difuminado",
+  "zenStylePlayerBlurLabel": "Desenfoque de Controles del Reproductor",
+  "zenStylePlayerBlurDesc": "Agregar efecto de desenfoque a los controles del reproductor"
 }
