--- a/locales/fr.json
+++ b/locales/fr.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Modèle d'URL (utiliser {videoId} ou {videoUrl})",
   "saveButton": "Enregistrer",
   "resetButton": "Réinitialiser",
-  "y2mateSettingsSaved": "Paramètres Y2Mate enregistrés",
-  "y2mateReset": "Y2Mate réinitialisé aux valeurs par défaut",
+  "externalDownloaderSettingsSaved": "Paramètres du téléchargeur externe enregistrés",
+  "externalDownloaderReset": "Téléchargeur externe réinitialisé aux valeurs par défaut",
   "youtubeSettings": "Paramètres YouTube +",
   "takeScreenshot": "Prendre une capture d'écran",
   "screenshotSaved": "Capture d'écran enregistrée",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Supprimer les suggestions d'écran de fin et les cartes d'information/logo de chaîne",
   "removedSuffix": " ({n} supprimé(s))",
   "scrollToTop": "Faire défiler vers le haut",
+  "enhancedFeaturesTitle": "Fonctionnalités améliorées",
+  "enhancedFeaturesDesc": "Fonctionnalités de productivité supplémentaires et améliorations de l'interface utilisateur",
+  "enablePlayAllLabel": "Bouton « Tout lire »",
+  "enablePlayAllDesc": "Ajouter un bouton « Tout lire » aux playlists et aux pages de chaîne",
+  "enableResumeTimeLabel": "Reprendre la lecture",
+  "enableResumeTimeDesc": "Mémoriser la position de la vidéo et proposer de reprendre",
+  "enableZoomLabel": "Zoom vidéo",
+  "enableZoomDesc": "Activer les contrôles de zoom et de panoramique pour le lecteur vidéo",
+  "enablePlaylistSearchLabel": "Recherche dans la playlist",
+  "enablePlaylistSearchDesc": "Ajouter une fonctionnalité de recherche aux panneaux de playlist",
+  "scrollToTopButtonLabel": "Retour en haut",
+  "scrollToTopButtonDesc": "Afficher le bouton de retour en haut sur les pages",
   "resumePlayback": "Reprendre la lecture?",
   "resume": "Reprendre",
   "startOver": "Recommencer",
@@ -77,6 +89,9 @@
   "subscribers": "Abonnés",
   "views": "Vues",
   "videos": "Vidéos",
+  "info": "Info",
+  "playlist": "Playlist",
+  "fetching": "Récupération...",
   "fontFamily": "Police",
   "fontSize": "Taille de police",
   "updateInterval": "Intervalle de mise à jour",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Maj",
   "searchPlaceholder": "Rechercher dans {playlist}...",
+  "searchPlaceholderPlaylistPage": "Rechercher dans cette playlist...",
   "shortTitle": "Titre court (une ligne)",
   "emailOptional": "Votre email (facultatif)",
   "descriptionPlaceholder": "Décrivez le problème, les étapes de reproduction, résultat attendu vs réel",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Impossible de modifier les chapitres YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Styles et fonctionnalités améliorés pour YouTube Music",
-  "musicStylesLabel": "Styles YouTube Music",
-  "musicStylesDesc": "Activer les styles YouTube Music améliorés (expérimental)",
-  "musicEnhancementsLabel": "Améliorations musicales",
-  "musicEnhancementsDesc": "Activer toutes les améliorations YouTube Music",
   "immersiveSearchLabel": "Recherche immersive",
   "immersiveSearchDesc": "Expérience de recherche immersive centrée au focus",
   "sidebarHoverLabel": "Effets de survol de la barre latérale",
   "sidebarHoverDesc": "Afficher la barre latérale au survol avec animations fluides",
+  "playerSidebarStylesLabel": "Panneau latéral du lecteur",
+  "playerSidebarStylesDesc": "Améliorer la mise en page et le comportement du panneau latéral du lecteur",
+  "playerBarStylesLabel": "Style de la barre du lecteur",
+  "playerBarStylesDesc": "Améliorer l'apparence de la barre inférieure du lecteur",
+  "centeredPlayerBarStylesLabel": "Barre du lecteur centrée",
+  "centeredPlayerBarStylesDesc": "Repositionner et centrer les contrôles de la barre du lecteur",
+  "miniPlayerStylesLabel": "Mini-lecteur",
+  "miniPlayerStylesDesc": "Activer des ajustements de mise en page pour le mini-lecteur",
   "centeredPlayerLabel": "Lecteur centré",
   "centeredPlayerDesc": "Centrer le lecteur avec un style amélioré",
   "scrollToTopLabel": "Bouton retour en haut",
   "scrollToTopDesc": "Afficher le bouton retour en haut dans le panneau latéral",
-  "musicSettingsSaved": "Paramètres YouTube Music enregistrés"
+  "musicSettingsSaved": "Paramètres YouTube Music enregistrés",
+  "zenStylesTitle": "Styles Zen",
+  "zenStylesDesc": "Styles visuels améliorés pour une expérience YouTube plus épurée",
+  "zenStyleThumbnailHoverLabel": "Aperçu de Miniature au Survol",
+  "zenStyleThumbnailHoverDesc": "Agrandir le lecteur d'aperçu en ligne au survol",
+  "zenStyleImmersiveSearchLabel": "Recherche Immersive",
+  "zenStyleImmersiveSearchDesc": "Expérience de barre de recherche centrée lors du focus",
+  "zenStyleHideVoiceSearchLabel": "Masquer la Recherche Vocale",
+  "zenStyleHideVoiceSearchDesc": "Supprimer le bouton de recherche vocale de l'en-tête",
+  "zenStyleTransparentHeaderLabel": "En-tête Transparent",
+  "zenStyleTransparentHeaderDesc": "Rendre l'arrière-plan de l'en-tête supérieur transparent",
+  "zenStyleHideSideGuideLabel": "Masquer la Barre Latérale",
+  "zenStyleHideSideGuideDesc": "Masquer complètement la barre latérale",
+  "zenStyleCleanSideGuideLabel": "Barre Latérale Épurée",
+  "zenStyleCleanSideGuideDesc": "Supprimer Premium/Sports/Paramètres de la barre latérale",
+  "zenStyleFixFeedLayoutLabel": "Corriger la Mise en Page du Fil",
+  "zenStyleFixFeedLayoutDesc": "Améliorer la mise en page de la grille vidéo sur la page d'accueil",
+  "zenStyleBetterCaptionsLabel": "Meilleurs Sous-titres",
+  "zenStyleBetterCaptionsDesc": "Style de sous-titres amélioré avec arrière-plan flou",
+  "zenStylePlayerBlurLabel": "Flou des Commandes du Lecteur",
+  "zenStylePlayerBlurDesc": "Ajouter un effet de flou aux commandes du lecteur"
 }
