--- a/locales/hi.json
+++ b/locales/hi.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL टेम्पलेट ({videoId} या {videoUrl} उपयोग करें)",
   "saveButton": "सहेजें",
   "resetButton": "रीसेट करें",
-  "y2mateSettingsSaved": "Y2Mate सेटिंग्स सहेजी गई",
-  "y2mateReset": "Y2Mate डिफ़ॉल्ट पर रीसेट हुआ",
+  "externalDownloaderSettingsSaved": "बाहरी डाउनलोडर सेटिंग्स सहेजी गई",
+  "externalDownloaderReset": "बाहरी डाउनलोडर डिफ़ॉल्ट पर रीसेट हुआ",
   "youtubeSettings": "YouTube + सेटिंग्स",
   "takeScreenshot": "स्क्रीनशॉट लें",
   "screenshotSaved": "स्क्रीनशॉट सहेजा गया",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "एंड स्क्रीन सुझाव और इन्फो कार्ड/चैनल लोगो हटाएं",
   "removedSuffix": " ({n} हटाए गए)",
   "scrollToTop": "शीर्ष पर स्क्रॉल करें",
+  "enhancedFeaturesTitle": "उन्नत सुविधाएँ",
+  "enhancedFeaturesDesc": "अतिरिक्त उत्पादकता सुविधाएँ और UI सुधार",
+  "enablePlayAllLabel": "सभी चलाएँ बटन",
+  "enablePlayAllDesc": "प्लेलिस्ट और चैनल पृष्ठों में 'सभी चलाएँ' बटन जोड़ें",
+  "enableResumeTimeLabel": "प्लेबैक फिर से शुरू करें",
+  "enableResumeTimeDesc": "वीडियो की स्थिति याद रखें और फिर से शुरू करने का विकल्प दें",
+  "enableZoomLabel": "वीडियो ज़ूम",
+  "enableZoomDesc": "वीडियो प्लेयर के लिए ज़ूम और पैन कंट्रोल सक्षम करें",
+  "enablePlaylistSearchLabel": "प्लेलिस्ट खोज",
+  "enablePlaylistSearchDesc": "प्लेलिस्ट पैनलों में खोज कार्यक्षमता जोड़ें",
+  "scrollToTopButtonLabel": "ऊपर स्क्रॉल करें बटन",
+  "scrollToTopButtonDesc": "पृष्ठों पर ऊपर स्क्रॉल करने का बटन दिखाएँ",
   "resumePlayback": "प्लेबैक फिर से शुरू करें?",
   "resume": "फिर से शुरू करें",
   "startOver": "फिर से शुरू करें",
@@ -77,6 +89,9 @@
   "subscribers": "सब्सक्राइबर",
   "views": "व्यूज",
   "videos": "वीडियो",
+  "info": "जानकारी",
+  "playlist": "प्लेलिस्ट",
+  "fetching": "प्राप्त किया जा रहा है...",
   "fontFamily": "फ़ॉन्ट परिवार",
   "fontSize": "फ़ॉन्ट आकार",
   "updateInterval": "अपडेट अंतराल",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "{playlist} में खोजें...",
+  "searchPlaceholderPlaylistPage": "इस प्लेलिस्ट में खोजें...",
   "shortTitle": "छोटा शीर्षक (एक पंक्ति)",
   "emailOptional": "आपका ईमेल (वैकल्पिक)",
   "descriptionPlaceholder": "समस्या का वर्णन करें, पुनरुत्पादन के चरण, अपेक्षित बनाम वास्तविक",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "YouTube अध्याय संपादित नहीं कर सकते",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music के लिए उन्नत स्टाइल और सुविधाएं",
-  "musicStylesLabel": "YouTube Music स्टाइल",
-  "musicStylesDesc": "उन्नत YouTube Music स्टाइल सक्षम करें (प्रायोगिक)",
-  "musicEnhancementsLabel": "Music सुधार",
-  "musicEnhancementsDesc": "सभी YouTube Music सुधार सक्षम करें",
   "immersiveSearchLabel": "इमर्सिव सर्च",
   "immersiveSearchDesc": "फोकस होने पर केंद्रित इमर्सिव सर्च अनुभव",
   "sidebarHoverLabel": "साइडबार होवर प्रभाव",
   "sidebarHoverDesc": "होवर पर साइडबार दिखाएं चिकने एनिमेशन के साथ",
+  "playerSidebarStylesLabel": "प्लेयर साइड पैनल",
+  "playerSidebarStylesDesc": "प्लेयर साइड पैनल के लेआउट और व्यवहार में सुधार करें",
+  "playerBarStylesLabel": "प्लेयर बार स्टाइलिंग",
+  "playerBarStylesDesc": "नीचे वाले प्लेयर बार के दिखावे में सुधार करें",
+  "centeredPlayerBarStylesLabel": "केंद्रित प्लेयर बार",
+  "centeredPlayerBarStylesDesc": "प्लेयर बार नियंत्रणों को पुनर्स्थापित और केंद्र में रखें",
+  "miniPlayerStylesLabel": "मिनी प्लेयर",
+  "miniPlayerStylesDesc": "मिनी-प्लेयर लेआउट ट्वीक सक्षम करें",
   "centeredPlayerLabel": "केंद्रित प्लेयर लेआउट",
   "centeredPlayerDesc": "उन्नत स्टाइलिंग के साथ प्लेयर केंद्रित करें",
   "scrollToTopLabel": "शीर्ष पर स्क्रॉल बटन",
   "scrollToTopDesc": "साइड पैनल में शीर्ष पर स्क्रॉल बटन दिखाएं",
-  "musicSettingsSaved": "YouTube Music सेटिंग्स सहेजी गईं"
+  "musicSettingsSaved": "YouTube Music सेटिंग्स सहेजी गईं",
+  "zenStylesTitle": "ज़ेन स्टाइल्स",
+  "zenStylesDesc": "एक साफ YouTube अनुभव के लिए बेहतर विज़ुअल स्टाइल",
+  "zenStyleThumbnailHoverLabel": "थंबनेल होवर प्रीव्यू",
+  "zenStyleThumbnailHoverDesc": "होवर पर इनलाइन प्रीव्यू प्लेयर को बड़ा करें",
+  "zenStyleImmersiveSearchLabel": "इमर्सिव सर्च",
+  "zenStyleImmersiveSearchDesc": "फोकस होने पर केंद्रित सर्च बॉक्स अनुभव",
+  "zenStyleHideVoiceSearchLabel": "वॉइस सर्च छुपाएं",
+  "zenStyleHideVoiceSearchDesc": "हेडर से वॉइस सर्च बटन हटाएं",
+  "zenStyleTransparentHeaderLabel": "पारदर्शी हेडर",
+  "zenStyleTransparentHeaderDesc": "शीर्ष हेडर पृष्ठभूमि को पारदर्शी बनाएं",
+  "zenStyleHideSideGuideLabel": "साइड गाइड छुपाएं",
+  "zenStyleHideSideGuideDesc": "साइडबार गाइड को पूरी तरह से छुपाएं",
+  "zenStyleCleanSideGuideLabel": "साफ साइड गाइड",
+  "zenStyleCleanSideGuideDesc": "साइडबार से प्रीमियम/स्पोर्ट्स/सेटिंग्स हटाएं",
+  "zenStyleFixFeedLayoutLabel": "फीड लेआउट ठीक करें",
+  "zenStyleFixFeedLayoutDesc": "होम पेज पर वीडियो ग्रिड लेआउट में सुधार करें",
+  "zenStyleBetterCaptionsLabel": "बेहतर कैप्शन",
+  "zenStyleBetterCaptionsDesc": "धुंधली पृष्ठभूमि के साथ बेहतर उपशीर्षक स्टाइलिंग",
+  "zenStylePlayerBlurLabel": "प्लेयर कंट्रोल ब्लर",
+  "zenStylePlayerBlurDesc": "प्लेयर कंट्रोल में ब्लर इफेक्ट जोड़ें"
 }
