--- a/locales/id.json
+++ b/locales/id.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Template URL (gunakan {videoId} atau {videoUrl})",
   "saveButton": "Simpan",
   "resetButton": "Atur ulang",
-  "y2mateSettingsSaved": "Pengaturan Y2Mate tersimpan",
-  "y2mateReset": "Y2Mate diatur ulang ke default",
+  "externalDownloaderSettingsSaved": "Pengaturan pengunduh eksternal tersimpan",
+  "externalDownloaderReset": "Pengunduh eksternal diatur ulang ke default",
   "youtubeSettings": "Pengaturan YouTube +",
   "takeScreenshot": "Ambil tangkapan layar",
   "screenshotSaved": "Tangkapan layar tersimpan",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Hapus saran layar akhir dan kartu info/logo saluran",
   "removedSuffix": " ({n} dihapus)",
   "scrollToTop": "Gulir ke atas",
+  "enhancedFeaturesTitle": "Fitur yang Ditingkatkan",
+  "enhancedFeaturesDesc": "Fitur produktivitas tambahan dan peningkatan antarmuka pengguna",
+  "enablePlayAllLabel": "Tombol Putar Semua",
+  "enablePlayAllDesc": "Tambahkan tombol Putar Semua ke playlist dan halaman saluran",
+  "enableResumeTimeLabel": "Lanjutkan Pemutaran",
+  "enableResumeTimeDesc": "Ingat posisi video dan tawarkan untuk melanjutkan",
+  "enableZoomLabel": "Perbesaran Video",
+  "enableZoomDesc": "Aktifkan kontrol zoom dan pan untuk pemutar video",
+  "enablePlaylistSearchLabel": "Pencarian Playlist",
+  "enablePlaylistSearchDesc": "Tambahkan fungsi pencarian ke panel playlist",
+  "scrollToTopButtonLabel": "Tombol Gulir ke Atas",
+  "scrollToTopButtonDesc": "Tampilkan tombol gulir ke atas di halaman",
   "resumePlayback": "Lanjutkan pemutaran?",
   "resume": "Lanjutkan",
   "startOver": "Mulai lagi",
@@ -77,6 +89,9 @@
   "subscribers": "Pelanggan",
   "views": "Tayangan",
   "videos": "Video",
+  "info": "Info",
+  "playlist": "Playlist",
+  "fetching": "Mengambil...",
   "fontFamily": "Jenis font",
   "fontSize": "Ukuran font",
   "updateInterval": "Interval pembaruan",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Cari di {playlist}...",
+  "searchPlaceholderPlaylistPage": "Cari di playlist ini...",
   "shortTitle": "Judul pendek (satu baris)",
   "emailOptional": "Email Anda (opsional)",
   "descriptionPlaceholder": "Jelaskan masalah, langkah untuk mereproduksi, yang diharapkan vs aktual",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Tidak dapat mengedit bab YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Gaya dan fitur yang ditingkatkan untuk YouTube Music",
-  "musicStylesLabel": "Gaya YouTube Music",
-  "musicStylesDesc": "Aktifkan gaya YouTube Music yang ditingkatkan (eksperimental)",
-  "musicEnhancementsLabel": "Peningkatan Music",
-  "musicEnhancementsDesc": "Aktifkan semua peningkatan YouTube Music",
   "immersiveSearchLabel": "Pencarian imersif",
   "immersiveSearchDesc": "Pengalaman pencarian imersif terpusat saat fokus",
   "sidebarHoverLabel": "Efek hover sidebar",
   "sidebarHoverDesc": "Tampilkan sidebar saat hover dengan animasi halus",
+  "playerSidebarStylesLabel": "Panel Samping Pemutar",
+  "playerSidebarStylesDesc": "Tingkatkan tata letak dan perilaku panel samping pemutar",
+  "playerBarStylesLabel": "Gaya Bilah Pemutar",
+  "playerBarStylesDesc": "Perbaiki tampilan bilah pemutar bagian bawah",
+  "centeredPlayerBarStylesLabel": "Bilah Pemutar Terpusat",
+  "centeredPlayerBarStylesDesc": "Atur ulang posisi dan pusatkan kontrol bilah pemutar",
+  "miniPlayerStylesLabel": "Pemutar Mini",
+  "miniPlayerStylesDesc": "Aktifkan penyesuaian tata letak pemutar mini",
   "centeredPlayerLabel": "Tata letak pemutar terpusat",
   "centeredPlayerDesc": "Pusatkan pemutar dengan gaya yang ditingkatkan",
   "scrollToTopLabel": "Tombol gulir ke atas",
   "scrollToTopDesc": "Tampilkan tombol gulir ke atas di panel samping",
-  "musicSettingsSaved": "Pengaturan YouTube Music tersimpan"
+  "musicSettingsSaved": "Pengaturan YouTube Music disimpan",
+  "zenStylesTitle": "Gaya Zen",
+  "zenStylesDesc": "Gaya visual yang ditingkatkan untuk pengalaman YouTube yang lebih bersih",
+  "zenStyleThumbnailHoverLabel": "Pratinjau Thumbnail saat Hover",
+  "zenStyleThumbnailHoverDesc": "Perbesar pemutar pratinjau inline saat hover",
+  "zenStyleImmersiveSearchLabel": "Pencarian Imersif",
+  "zenStyleImmersiveSearchDesc": "Pengalaman kotak pencarian terpusat saat difokuskan",
+  "zenStyleHideVoiceSearchLabel": "Sembunyikan Pencarian Suara",
+  "zenStyleHideVoiceSearchDesc": "Hapus tombol pencarian suara dari header",
+  "zenStyleTransparentHeaderLabel": "Header Transparan",
+  "zenStyleTransparentHeaderDesc": "Buat latar belakang header atas transparan",
+  "zenStyleHideSideGuideLabel": "Sembunyikan Panduan Samping",
+  "zenStyleHideSideGuideDesc": "Sembunyikan panduan sidebar sepenuhnya",
+  "zenStyleCleanSideGuideLabel": "Panduan Samping Bersih",
+  "zenStyleCleanSideGuideDesc": "Hapus Premium/Olahraga/Pengaturan dari sidebar",
+  "zenStyleFixFeedLayoutLabel": "Perbaiki Tata Letak Feed",
+  "zenStyleFixFeedLayoutDesc": "Tingkatkan tata letak grid video di halaman beranda",
+  "zenStyleBetterCaptionsLabel": "Teks Terjemahan Lebih Baik",
+  "zenStyleBetterCaptionsDesc": "Gaya teks terjemahan yang ditingkatkan dengan latar belakang blur",
+  "zenStylePlayerBlurLabel": "Blur Kontrol Pemutar",
+  "zenStylePlayerBlurDesc": "Tambahkan efek blur ke kontrol pemutar"
 }
