--- a/locales/it.json
+++ b/locales/it.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Template URL (usa {videoId} o {videoUrl})",
   "saveButton": "Salva",
   "resetButton": "Ripristina",
-  "y2mateSettingsSaved": "Impostazioni Y2Mate salvate",
-  "y2mateReset": "Y2Mate ripristinato ai valori predefiniti",
+  "externalDownloaderSettingsSaved": "Impostazioni downloader esterno salvate",
+  "externalDownloaderReset": "Downloader esterno ripristinato ai valori predefiniti",
   "youtubeSettings": "Impostazioni YouTube +",
   "takeScreenshot": "Cattura schermo",
   "screenshotSaved": "Screenshot salvato",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Rimuovi suggerimenti schermata finale e schede informative/logo canale",
   "removedSuffix": " ({n} rimossi)",
   "scrollToTop": "Scorri in alto",
+  "enhancedFeaturesTitle": "Funzionalità avanzate",
+  "enhancedFeaturesDesc": "Funzionalità di produttività aggiuntive e miglioramenti dell'interfaccia utente",
+  "enablePlayAllLabel": "Pulsante Riproduci tutto",
+  "enablePlayAllDesc": "Aggiungi il pulsante Riproduci tutto alle playlist e alle pagine del canale",
+  "enableResumeTimeLabel": "Riprendi riproduzione",
+  "enableResumeTimeDesc": "Ricorda la posizione del video e offre di riprenderla",
+  "enableZoomLabel": "Zoom video",
+  "enableZoomDesc": "Abilita controlli di zoom e panoramica per il lettore video",
+  "enablePlaylistSearchLabel": "Ricerca playlist",
+  "enablePlaylistSearchDesc": "Aggiungi la funzionalità di ricerca ai pannelli delle playlist",
+  "scrollToTopButtonLabel": "Torna su",
+  "scrollToTopButtonDesc": "Mostra il pulsante per tornare in alto nelle pagine",
   "resumePlayback": "Riprendere la riproduzione?",
   "resume": "Riprendi",
   "startOver": "Ricomincia",
@@ -77,6 +89,9 @@
   "subscribers": "Iscritti",
   "views": "Visualizzazioni",
   "videos": "Video",
+  "info": "Info",
+  "playlist": "Playlist",
+  "fetching": "Recupero",
   "fontFamily": "Font",
   "fontSize": "Dimensione font",
   "updateInterval": "Intervallo aggiornamento",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Cerca in {playlist}...",
+  "searchPlaceholderPlaylistPage": "Cerca in questa playlist...",
   "shortTitle": "Titolo breve (una riga)",
   "emailOptional": "La tua email (facoltativa)",
   "descriptionPlaceholder": "Descrivi il problema, passi per riprodurre, atteso vs reale",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Impossibile modificare i capitoli YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Stili e funzionalità migliorate per YouTube Music",
-  "musicStylesLabel": "Stili YouTube Music",
-  "musicStylesDesc": "Abilita stili YouTube Music migliorati (sperimentale)",
-  "musicEnhancementsLabel": "Miglioramenti Music",
-  "musicEnhancementsDesc": "Abilita tutti i miglioramenti YouTube Music",
   "immersiveSearchLabel": "Ricerca immersiva",
   "immersiveSearchDesc": "Esperienza di ricerca immersiva centrata quando attiva",
   "sidebarHoverLabel": "Effetti hover barra laterale",
   "sidebarHoverDesc": "Mostra barra laterale al passaggio del mouse con animazioni fluide",
+  "playerSidebarStylesLabel": "Pannello laterale del player",
+  "playerSidebarStylesDesc": "Migliora il layout e il comportamento del pannello laterale del player",
+  "playerBarStylesLabel": "Stile barra del player",
+  "playerBarStylesDesc": "Migliora l'aspetto della barra inferiore del player",
+  "centeredPlayerBarStylesLabel": "Barra del player centrata",
+  "centeredPlayerBarStylesDesc": "Riposiziona e centra i controlli della barra del player",
+  "miniPlayerStylesLabel": "Mini player",
+  "miniPlayerStylesDesc": "Abilita modifiche al layout del mini-player",
   "centeredPlayerLabel": "Layout lettore centrato",
   "centeredPlayerDesc": "Centra il lettore con stile migliorato",
   "scrollToTopLabel": "Pulsante scorri in alto",
   "scrollToTopDesc": "Mostra pulsante scorri in alto nel pannello laterale",
-  "musicSettingsSaved": "Impostazioni YouTube Music salvate"
+  "musicSettingsSaved": "Impostazioni di YouTube Music salvate",
+  "zenStylesTitle": "Stili Zen",
+  "zenStylesDesc": "Stili visivi migliorati per un'esperienza YouTube più pulita",
+  "zenStyleThumbnailHoverLabel": "Anteprima Miniatura al Passaggio",
+  "zenStyleThumbnailHoverDesc": "Ingrandisci il lettore di anteprima inline al passaggio del mouse",
+  "zenStyleImmersiveSearchLabel": "Ricerca Immersiva",
+  "zenStyleImmersiveSearchDesc": "Esperienza di casella di ricerca centrata quando in focus",
+  "zenStyleHideVoiceSearchLabel": "Nascondi Ricerca Vocale",
+  "zenStyleHideVoiceSearchDesc": "Rimuovi il pulsante di ricerca vocale dall'intestazione",
+  "zenStyleTransparentHeaderLabel": "Intestazione Trasparente",
+  "zenStyleTransparentHeaderDesc": "Rendi trasparente lo sfondo dell'intestazione superiore",
+  "zenStyleHideSideGuideLabel": "Nascondi Barra Laterale",
+  "zenStyleHideSideGuideDesc": "Nascondi completamente la barra laterale",
+  "zenStyleCleanSideGuideLabel": "Barra Laterale Pulita",
+  "zenStyleCleanSideGuideDesc": "Rimuovi Premium/Sport/Impostazioni dalla barra laterale",
+  "zenStyleFixFeedLayoutLabel": "Correggi Layout Feed",
+  "zenStyleFixFeedLayoutDesc": "Migliora il layout della griglia video nella home page",
+  "zenStyleBetterCaptionsLabel": "Sottotitoli Migliori",
+  "zenStyleBetterCaptionsDesc": "Stile dei sottotitoli migliorato con sfondo sfocato",
+  "zenStylePlayerBlurLabel": "Sfocatura Controlli Lettore",
+  "zenStylePlayerBlurDesc": "Aggiungi effetto sfocatura ai controlli del lettore"
 }
