--- a/locales/jp.json
+++ b/locales/jp.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL テンプレート（{videoId} または {videoUrl} を使用）",
   "saveButton": "保存",
   "resetButton": "リセット",
-  "y2mateSettingsSaved": "Y2Mate 設定が保存されました",
-  "y2mateReset": "Y2Mate がデフォルトにリセットされました",
+  "externalDownloaderSettingsSaved": "外部ダウンローダーの設定が保存されました",
+  "externalDownloaderReset": "外部ダウンローダーがデフォルトにリセットされました",
   "youtubeSettings": "YouTube + 設定",
   "takeScreenshot": "スクリーンショットを撮る",
   "screenshotSaved": "スクリーンショットを保存しました",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "エンドスクリーンの提案と情報カード/チャンネルロゴを削除",
   "removedSuffix": "（{n}件削除）",
   "scrollToTop": "トップにスクロール",
+  "enhancedFeaturesTitle": "拡張機能",
+  "enhancedFeaturesDesc": "生産性向上の機能とUIの改善を追加",
+  "enablePlayAllLabel": "すべて再生ボタン",
+  "enablePlayAllDesc": "プレイリストとチャンネルページにすべて再生ボタンを追加",
+  "enableResumeTimeLabel": "再生を再開",
+  "enableResumeTimeDesc": "動画の再生位置を記憶し、再開を提案します",
+  "enableZoomLabel": "ビデオズーム",
+  "enableZoomDesc": "ビデオプレーヤーにズームとパンの操作を有効にする",
+  "enablePlaylistSearchLabel": "プレイリスト検索",
+  "enablePlaylistSearchDesc": "プレイリストパネルに検索機能を追加",
+  "scrollToTopButtonLabel": "トップへスクロール",
+  "scrollToTopButtonDesc": "ページにトップへスクロールボタンを表示する",
   "resumePlayback": "再生を再開しますか？",
   "resume": "再開",
   "startOver": "最初から",
@@ -77,6 +89,9 @@
   "subscribers": "登録者",
   "views": "再生回数",
   "videos": "動画",
+  "info": "情報",
+  "playlist": "プレイリスト",
+  "fetching": "取得中",
   "fontFamily": "フォント",
   "fontSize": "フォントサイズ",
   "updateInterval": "更新間隔",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "{playlist} で検索...",
+  "searchPlaceholderPlaylistPage": "この再生リスト内を検索...",
   "shortTitle": "短いタイトル（1行）",
   "emailOptional": "メールアドレス（オプション）",
   "descriptionPlaceholder": "問題、再現手順、期待される結果と実際の結果を説明",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "YouTubeチャプターは編集できません",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music向けの拡張スタイルと機能",
-  "musicStylesLabel": "YouTube Musicスタイル",
-  "musicStylesDesc": "拡張YouTube Musicスタイルを有効にする（実験的）",
-  "musicEnhancementsLabel": "音楽機能強化",
-  "musicEnhancementsDesc": "すべてのYouTube Music機能強化を有効にする",
   "immersiveSearchLabel": "没入型検索",
   "immersiveSearchDesc": "フォーカス時の中央配置没入型検索体験",
   "sidebarHoverLabel": "サイドバーホバー効果",
   "sidebarHoverDesc": "スムーズなアニメーションでホバー時にサイドバーを表示",
+  "playerSidebarStylesLabel": "プレーヤーサイドパネル",
+  "playerSidebarStylesDesc": "プレーヤーのサイドパネルのレイアウトと動作を強化する",
+  "playerBarStylesLabel": "プレーヤーバーのスタイル",
+  "playerBarStylesDesc": "下部プレーヤーバーの外観を改善する",
+  "centeredPlayerBarStylesLabel": "中央配置プレーヤーバー",
+  "centeredPlayerBarStylesDesc": "プレーヤーバーのコントロールを再配置して中央に配置する",
+  "miniPlayerStylesLabel": "ミニプレーヤー",
+  "miniPlayerStylesDesc": "ミニプレーヤーのレイアウト調整を有効にする",
   "centeredPlayerLabel": "中央配置プレーヤー",
   "centeredPlayerDesc": "拡張スタイルでプレーヤーを中央に配置",
   "scrollToTopLabel": "トップへスクロールボタン",
   "scrollToTopDesc": "サイドパネルにトップへスクロールボタンを表示",
-  "musicSettingsSaved": "YouTube Music設定が保存されました"
+  "musicSettingsSaved": "YouTube Music設定が保存されました",
+  "zenStylesTitle": "禅スタイル",
+  "zenStylesDesc": "よりクリーンなYouTube体験のための強化されたビジュアルスタイル",
+  "zenStyleThumbnailHoverLabel": "サムネイルホバープレビュー",
+  "zenStyleThumbnailHoverDesc": "ホバー時にインラインプレビュープレーヤーを拡大",
+  "zenStyleImmersiveSearchLabel": "没入型検索",
+  "zenStyleImmersiveSearchDesc": "フォーカス時に中央揃えの検索ボックス体験",
+  "zenStyleHideVoiceSearchLabel": "音声検索を非表示",
+  "zenStyleHideVoiceSearchDesc": "ヘッダーから音声検索ボタンを削除",
+  "zenStyleTransparentHeaderLabel": "透明ヘッダー",
+  "zenStyleTransparentHeaderDesc": "上部ヘッダーの背景を透明にする",
+  "zenStyleHideSideGuideLabel": "サイドガイドを非表示",
+  "zenStyleHideSideGuideDesc": "サイドバーガイドを完全に非表示にする",
+  "zenStyleCleanSideGuideLabel": "クリーンなサイドガイド",
+  "zenStyleCleanSideGuideDesc": "サイドバーからプレミアム/スポーツ/設定を削除",
+  "zenStyleFixFeedLayoutLabel": "フィードレイアウトを修正",
+  "zenStyleFixFeedLayoutDesc": "ホームページの動画グリッドレイアウトを改善",
+  "zenStyleBetterCaptionsLabel": "より良い字幕",
+  "zenStyleBetterCaptionsDesc": "ぼかし背景付きの強化された字幕スタイリング",
+  "zenStylePlayerBlurLabel": "プレーヤーコントロールのぼかし",
+  "zenStylePlayerBlurDesc": "プレーヤーコントロールにぼかし効果を追加"
 }
