--- a/locales/kr.json
+++ b/locales/kr.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL 템플릿 ({videoId} 또는 {videoUrl} 사용)",
   "saveButton": "저장",
   "resetButton": "초기화",
-  "y2mateSettingsSaved": "Y2Mate 설정 저장됨",
-  "y2mateReset": "Y2Mate가 기본값으로 초기화됨",
+  "externalDownloaderSettingsSaved": "외부 다운로드 설정 저장됨",
+  "externalDownloaderReset": "외부 다운로드 초기화됨",
   "youtubeSettings": "YouTube + 설정",
   "takeScreenshot": "스크린샷 찍기",
   "screenshotSaved": "스크린샷 저장됨",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "엔드 스크린 제안 및 정보 카드/채널 로고 제거",
   "removedSuffix": " ({n}개 제거됨)",
   "scrollToTop": "맨 위로 스크롤",
+  "enhancedFeaturesTitle": "향상된 기능",
+  "enhancedFeaturesDesc": "추가적인 생산성 기능 및 UI 향상",
+  "enablePlayAllLabel": "모두 재생 버튼",
+  "enablePlayAllDesc": "재생목록 및 채널 페이지에 모두 재생 버튼 추가",
+  "enableResumeTimeLabel": "재생 이어서",
+  "enableResumeTimeDesc": "비디오 위치를 기억하고 재생을 이어갈지 제안",
+  "enableZoomLabel": "비디오 줌",
+  "enableZoomDesc": "비디오 플레이어에 줌 및 팬 컨트롤 활성화",
+  "enablePlaylistSearchLabel": "재생목록 검색",
+  "enablePlaylistSearchDesc": "재생목록 패널에 검색 기능 추가",
+  "scrollToTopButtonLabel": "맨 위로 스크롤 버튼",
+  "scrollToTopButtonDesc": "페이지에 맨 위로 스크롤 버튼 표시",
   "resumePlayback": "재생을 계속하시겠습니까?",
   "resume": "계속",
   "startOver": "처음부터",
@@ -77,6 +89,9 @@
   "subscribers": "구독자",
   "views": "조회수",
   "videos": "비디오",
+  "info": "정보",
+  "playlist": "재생목록",
+  "fetching": "가져오는 중",
   "fontFamily": "글꼴",
   "fontSize": "글꼴 크기",
   "updateInterval": "업데이트 간격",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "{playlist}에서 검색...",
+  "searchPlaceholderPlaylistPage": "이 재생목록에서 검색...",
   "shortTitle": "짧은 제목 (한 줄)",
   "emailOptional": "이메일 (선택사항)",
   "descriptionPlaceholder": "문제, 재현 단계, 예상 결과와 실제 결과 설명",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "YouTube 챕터는 편집할 수 없습니다",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music을 위한 향상된 스타일 및 기능",
-  "musicStylesLabel": "YouTube Music 스타일",
-  "musicStylesDesc": "향상된 YouTube Music 스타일 활성화 (실험적)",
-  "musicEnhancementsLabel": "음악 개선",
-  "musicEnhancementsDesc": "모든 YouTube Music 개선 활성화",
   "immersiveSearchLabel": "몰입형 검색",
   "immersiveSearchDesc": "포커스 시 중앙 몰입형 검색 경험",
   "sidebarHoverLabel": "사이드바 호버 효과",
   "sidebarHoverDesc": "부드러운 애니메이션과 함께 호버 시 사이드바 표시",
+  "playerSidebarStylesLabel": "플레이어 사이드 패널",
+  "playerSidebarStylesDesc": "플레이어 사이드 패널의 레이아웃과 동작을 개선",
+  "playerBarStylesLabel": "플레이어 바 스타일",
+  "playerBarStylesDesc": "하단 플레이어 바의 외관을 개선",
+  "centeredPlayerBarStylesLabel": "중앙 정렬된 플레이어 바",
+  "centeredPlayerBarStylesDesc": "플레이어 바 컨트롤을 재배치하고 중앙에 정렬",
+  "miniPlayerStylesLabel": "미니 플레이어",
+  "miniPlayerStylesDesc": "미니 플레이어 레이아웃 조정 활성화",
   "centeredPlayerLabel": "중앙 플레이어 레이아웃",
   "centeredPlayerDesc": "향상된 스타일로 플레이어 중앙 배치",
   "scrollToTopLabel": "맨 위로 스크롤 버튼",
   "scrollToTopDesc": "사이드 패널에 맨 위로 스크롤 버튼 표시",
-  "musicSettingsSaved": "YouTube Music 설정 저장됨"
+  "musicSettingsSaved": "YouTube Music 설정이 저장되었습니다",
+  "zenStylesTitle": "젠 스타일",
+  "zenStylesDesc": "더 깨끗한 YouTube 경험을 위한 향상된 비주얼 스타일",
+  "zenStyleThumbnailHoverLabel": "썸네일 호버 미리보기",
+  "zenStyleThumbnailHoverDesc": "호버 시 인라인 미리보기 플레이어 확대",
+  "zenStyleImmersiveSearchLabel": "몰입형 검색",
+  "zenStyleImmersiveSearchDesc": "포커스 시 중앙 정렬된 검색창 경험",
+  "zenStyleHideVoiceSearchLabel": "음성 검색 숨기기",
+  "zenStyleHideVoiceSearchDesc": "헤더에서 음성 검색 버튼 제거",
+  "zenStyleTransparentHeaderLabel": "투명 헤더",
+  "zenStyleTransparentHeaderDesc": "상단 헤더 배경을 투명하게 만들기",
+  "zenStyleHideSideGuideLabel": "사이드 가이드 숨기기",
+  "zenStyleHideSideGuideDesc": "사이드바 가이드를 완전히 숨기기",
+  "zenStyleCleanSideGuideLabel": "깨끗한 사이드 가이드",
+  "zenStyleCleanSideGuideDesc": "사이드바에서 프리미엄/스포츠/설정 제거",
+  "zenStyleFixFeedLayoutLabel": "피드 레이아웃 수정",
+  "zenStyleFixFeedLayoutDesc": "홈 페이지의 동영상 그리드 레이아웃 개선",
+  "zenStyleBetterCaptionsLabel": "더 나은 자막",
+  "zenStyleBetterCaptionsDesc": "블러 배경이 있는 향상된 자막 스타일링",
+  "zenStylePlayerBlurLabel": "플레이어 컨트롤 블러",
+  "zenStylePlayerBlurDesc": "플레이어 컨트롤에 블러 효과 추가"
 }
