--- a/locales/pl.json
+++ b/locales/pl.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Szablon URL (użyj {videoId} lub {videoUrl})",
   "saveButton": "Zapisz",
   "resetButton": "Resetuj",
-  "y2mateSettingsSaved": "Ustawienia Y2Mate zapisane",
-  "y2mateReset": "Y2Mate przywrócono do wartości domyślnych",
+  "externalDownloaderSettingsSaved": "Ustawienia zewnętrznego pobieracza zapisane",
+  "externalDownloaderReset": "Zewnętrzny pobieracz przywrócony do ustawień domyślnych",
   "youtubeSettings": "Ustawienia YouTube +",
   "takeScreenshot": "Zrób zrzut ekranu",
   "screenshotSaved": "Zrzut ekranu zapisany",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Usuń sugestie ekranu końcowego i karty informacyjne/logo kanału",
   "removedSuffix": " ({n} usunięto)",
   "scrollToTop": "Przewiń do góry",
+  "enhancedFeaturesTitle": "Ulepszone funkcje",
+  "enhancedFeaturesDesc": "Dodatkowe funkcje zwiększające produktywność oraz ulepszenia interfejsu użytkownika",
+  "enablePlayAllLabel": "Przycisk „Odtwórz wszystko”",
+  "enablePlayAllDesc": "Dodaj przycisk „Odtwórz wszystko” do playlist i stron kanałów",
+  "enableResumeTimeLabel": "Wznów odtwarzanie",
+  "enableResumeTimeDesc": "Zapamiętaj pozycję w wideo i zaoferuj wznowienie",
+  "enableZoomLabel": "Powiększenie wideo",
+  "enableZoomDesc": "Włącz kontrolki powiększania i przesuwania dla odtwarzacza wideo",
+  "enablePlaylistSearchLabel": "Wyszukiwanie w playlistach",
+  "enablePlaylistSearchDesc": "Dodaj funkcję wyszukiwania do paneli playlist",
+  "scrollToTopButtonLabel": "Przewiń na górę",
+  "scrollToTopButtonDesc": "Pokaż przycisk przewijania na górę na stronach",
   "resumePlayback": "Wznowić odtwarzanie?",
   "resume": "Wznów",
   "startOver": "Zacznij od nowa",
@@ -77,6 +89,9 @@
   "subscribers": "Subskrybenci",
   "views": "Wyświetlenia",
   "videos": "Filmy",
+  "info": "Opis",
+  "playlist": "Lista odtwarzania",
+  "fetching": "Pobieranie...",
   "fontFamily": "Czcionka",
   "fontSize": "Rozmiar czcionki",
   "updateInterval": "Interwał aktualizacji",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Szukaj w {playlist}...",
+  "searchPlaceholderPlaylistPage": "Szukaj w tej playliscie...",
   "shortTitle": "Krótki tytuł (jedna linia)",
   "emailOptional": "Twój email (opcjonalnie)",
   "descriptionPlaceholder": "Opisz problem, kroki do odtworzenia, oczekiwane vs rzeczywiste",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Nie można edytować rozdziałów YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Ulepszone style i funkcje dla YouTube Music",
-  "musicStylesLabel": "Style YouTube Music",
-  "musicStylesDesc": "Włącz ulepszone style YouTube Music (eksperymentalne)",
-  "musicEnhancementsLabel": "Ulepszenia Music",
-  "musicEnhancementsDesc": "Włącz wszystkie ulepszenia YouTube Music",
   "immersiveSearchLabel": "Wyszukiwanie immersyjne",
   "immersiveSearchDesc": "Wyśrodkowane immersyjne wyszukiwanie po aktywacji",
   "sidebarHoverLabel": "Efekty najechania na pasek boczny",
   "sidebarHoverDesc": "Pokaż pasek boczny przy najechaniu z płynnymi animacjami",
+  "playerSidebarStylesLabel": "Panel boczny odtwarzacza",
+  "playerSidebarStylesDesc": "Ulepsz układ i zachowanie panelu bocznego odtwarzacza",
+  "playerBarStylesLabel": "Styl paska odtwarzacza",
+  "playerBarStylesDesc": "Popraw wygląd dolnego paska odtwarzacza",
+  "centeredPlayerBarStylesLabel": "Wyśrodkowany pasek odtwarzacza",
+  "centeredPlayerBarStylesDesc": "Przemieść i wyśrodkuj kontrolki paska odtwarzacza",
+  "miniPlayerStylesLabel": "Mini odtwarzacz",
+  "miniPlayerStylesDesc": "Włącz poprawki układu mini-odtwarzacza",
   "centeredPlayerLabel": "Wyśrodkowany układ odtwarzacza",
   "centeredPlayerDesc": "Wyśrodkuj odtwarzacz z ulepszonym stylem",
   "scrollToTopLabel": "Przycisk przewijania do góry",
   "scrollToTopDesc": "Pokaż przycisk przewijania do góry w panelu bocznym",
-  "musicSettingsSaved": "Ustawienia YouTube Music zapisane"
+  "musicSettingsSaved": "Ustawienia YouTube Music zapisane",
+  "zenStylesTitle": "Style Zen",
+  "zenStylesDesc": "Ulepszone style wizualne dla czystszego doświadczenia YouTube",
+  "zenStyleThumbnailHoverLabel": "Podgląd Miniatury przy Najechaniu",
+  "zenStyleThumbnailHoverDesc": "Powiększ wbudowany odtwarzacz podglądu przy najechaniu",
+  "zenStyleImmersiveSearchLabel": "Immersyjne Wyszukiwanie",
+  "zenStyleImmersiveSearchDesc": "Wyśrodkowane pole wyszukiwania po uzyskaniu fokusu",
+  "zenStyleHideVoiceSearchLabel": "Ukryj Wyszukiwanie Głosowe",
+  "zenStyleHideVoiceSearchDesc": "Usuń przycisk wyszukiwania głosowego z nagłówka",
+  "zenStyleTransparentHeaderLabel": "Przezroczysty Nagłówek",
+  "zenStyleTransparentHeaderDesc": "Uczyń tło górnego nagłówka przezroczystym",
+  "zenStyleHideSideGuideLabel": "Ukryj Pasek Boczny",
+  "zenStyleHideSideGuideDesc": "Całkowicie ukryj przewodnik boczny",
+  "zenStyleCleanSideGuideLabel": "Czysty Pasek Boczny",
+  "zenStyleCleanSideGuideDesc": "Usuń Premium/Sport/Ustawienia z paska bocznego",
+  "zenStyleFixFeedLayoutLabel": "Napraw Układ Strumienia",
+  "zenStyleFixFeedLayoutDesc": "Ulepsz układ siatki wideo na stronie głównej",
+  "zenStyleBetterCaptionsLabel": "Lepsze Napisy",
+  "zenStyleBetterCaptionsDesc": "Ulepszone stylizowanie napisów z rozmytym tłem",
+  "zenStylePlayerBlurLabel": "Rozmycie Kontrolek Odtwarzacza",
+  "zenStylePlayerBlurDesc": "Dodaj efekt rozmycia do kontrolek odtwarzacza"
 }
