--- a/locales/pt.json
+++ b/locales/pt.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Modelo de URL (use {videoId} ou {videoUrl})",
   "saveButton": "Salvar",
   "resetButton": "Redefinir",
-  "y2mateSettingsSaved": "Configurações do Y2Mate salvas",
-  "y2mateReset": "Y2Mate redefinido para padrões",
+  "externalDownloaderSettingsSaved": "Configurações do downloader externo salvas",
+  "externalDownloaderReset": "Downloader externo redefinido para padrões",
   "youtubeSettings": "Configurações do YouTube +",
   "takeScreenshot": "Capturar tela",
   "screenshotSaved": "Captura salva",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Remover sugestões de tela final e cartões de informação/logo do canal",
   "removedSuffix": " ({n} removidos)",
   "scrollToTop": "Rolar para o topo",
+  "enhancedFeaturesTitle": "Recursos Aprimorados",
+  "enhancedFeaturesDesc": "Recursos de produtividade adicionais e melhorias de interface",
+  "enablePlayAllLabel": "Botão Reproduzir Tudo",
+  "enablePlayAllDesc": "Adicionar botão 'Reproduzir Tudo' em playlists e páginas do canal",
+  "enableResumeTimeLabel": "Retomar Reprodução",
+  "enableResumeTimeDesc": "Lembrar a posição do vídeo e oferecer retomar",
+  "enableZoomLabel": "Zoom do Vídeo",
+  "enableZoomDesc": "Ativar controles de zoom e panorâmica no reprodutor de vídeo",
+  "enablePlaylistSearchLabel": "Pesquisa em Playlists",
+  "enablePlaylistSearchDesc": "Adicionar funcionalidade de busca aos painéis de playlist",
+  "scrollToTopButtonLabel": "Rolar para o Topo",
+  "scrollToTopButtonDesc": "Exibir botão de rolar para o topo nas páginas",
   "resumePlayback": "Retomar reprodução?",
   "resume": "Retomar",
   "startOver": "Começar novamente",
@@ -77,6 +89,9 @@
   "subscribers": "Inscritos",
   "views": "Visualizações",
   "videos": "Vídeos",
+  "info": "Descrição",
+  "playlist": "Playlist",
+  "fetching": "Buscando",
   "fontFamily": "Família da fonte",
   "fontSize": "Tamanho da fonte",
   "updateInterval": "Intervalo de atualização",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Pesquisar em {playlist}...",
+  "searchPlaceholderPlaylistPage": "Pesquisar nesta playlist...",
   "shortTitle": "Título curto (uma linha)",
   "emailOptional": "Seu e-mail (opcional)",
   "descriptionPlaceholder": "Descreva o problema, passos para reproduzir, esperado vs real",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Não é possível editar capítulos do YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Estilos e recursos aprimorados para YouTube Music",
-  "musicStylesLabel": "Estilos do YouTube Music",
-  "musicStylesDesc": "Ativar estilos aprimorados do YouTube Music (experimental)",
-  "musicEnhancementsLabel": "Melhorias de Music",
-  "musicEnhancementsDesc": "Ativar todas as melhorias do YouTube Music",
   "immersiveSearchLabel": "Pesquisa imersiva",
   "immersiveSearchDesc": "Experiência de pesquisa imersiva centralizada quando focada",
   "sidebarHoverLabel": "Efeitos de hover na barra lateral",
   "sidebarHoverDesc": "Mostrar barra lateral ao passar o mouse com animações suaves",
+  "playerSidebarStylesLabel": "Painel lateral do player",
+  "playerSidebarStylesDesc": "Aprimorar o layout e o comportamento do painel lateral do player",
+  "playerBarStylesLabel": "Estilos da barra do player",
+  "playerBarStylesDesc": "Melhorar a aparência da barra inferior do player",
+  "centeredPlayerBarStylesLabel": "Barra do player centralizada",
+  "centeredPlayerBarStylesDesc": "Reposicionar e centralizar os controles da barra do player",
+  "miniPlayerStylesLabel": "Mini player",
+  "miniPlayerStylesDesc": "Ativar ajustes no layout do mini-player",
   "centeredPlayerLabel": "Layout de reprodutor centralizado",
   "centeredPlayerDesc": "Centralizar o reprodutor com estilo aprimorado",
   "scrollToTopLabel": "Botão de rolar para o topo",
   "scrollToTopDesc": "Mostrar botão de rolar para o topo no painel lateral",
-  "musicSettingsSaved": "Configurações do YouTube Music salvas"
+  "musicSettingsSaved": "Configurações do YouTube Music salvas",
+  "zenStylesTitle": "Estilos Zen",
+  "zenStylesDesc": "Estilos visuais aprimorados para uma experiência mais limpa no YouTube",
+  "zenStyleThumbnailHoverLabel": "Visualização de Miniatura ao Passar o Mouse",
+  "zenStyleThumbnailHoverDesc": "Ampliar reprodutor de visualização inline ao passar o mouse",
+  "zenStyleImmersiveSearchLabel": "Pesquisa Imersiva",
+  "zenStyleImmersiveSearchDesc": "Experiência de caixa de pesquisa centralizada ao focar",
+  "zenStyleHideVoiceSearchLabel": "Ocultar Pesquisa por Voz",
+  "zenStyleHideVoiceSearchDesc": "Remover botão de pesquisa por voz do cabeçalho",
+  "zenStyleTransparentHeaderLabel": "Cabeçalho Transparente",
+  "zenStyleTransparentHeaderDesc": "Tornar o fundo do cabeçalho superior transparente",
+  "zenStyleHideSideGuideLabel": "Ocultar Guia Lateral",
+  "zenStyleHideSideGuideDesc": "Ocultar completamente o guia da barra lateral",
+  "zenStyleCleanSideGuideLabel": "Guia Lateral Limpo",
+  "zenStyleCleanSideGuideDesc": "Remover Premium/Esportes/Configurações da barra lateral",
+  "zenStyleFixFeedLayoutLabel": "Corrigir Layout do Feed",
+  "zenStyleFixFeedLayoutDesc": "Melhorar o layout da grade de vídeos na página inicial",
+  "zenStyleBetterCaptionsLabel": "Legendas Melhores",
+  "zenStyleBetterCaptionsDesc": "Estilo de legendas aprimorado com fundo desfocado",
+  "zenStylePlayerBlurLabel": "Desfoque dos Controles do Reprodutor",
+  "zenStylePlayerBlurDesc": "Adicionar efeito de desfoque aos controles do reprodutor"
 }
