--- a/locales/ru.json
+++ b/locales/ru.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Шаблон URL (используйте {videoId} или {videoUrl})",
   "saveButton": "Сохранить",
   "resetButton": "Сбросить",
-  "y2mateSettingsSaved": "Настройки Y2Mate сохранены",
-  "y2mateReset": "Y2Mate сброшен к значениям по умолчанию",
+  "externalDownloaderSettingsSaved": "Настройки внешнего загрузчика сохранены",
+  "externalDownloaderReset": "Внешний загрузчик сброшен к значениям по умолчанию",
   "youtubeSettings": "Настройки YouTube +",
   "takeScreenshot": "Сделать скриншот",
   "screenshotSaved": "Скриншот сохранён",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Удалить предложения конечного экрана и информационные карточки/логотип канала",
   "removedSuffix": " ({n} удалено)",
   "scrollToTop": "Прокрутить вверх",
+  "enhancedFeaturesTitle": "Расширенные функции",
+  "enhancedFeaturesDesc": "Дополнительные функции продуктивности и улучшения интерфейса",
+  "enablePlayAllLabel": "Кнопка «Воспроизвести все»",
+  "enablePlayAllDesc": "Добавить кнопку «Воспроизвести все» на плейлисты и страницы каналов",
+  "enableResumeTimeLabel": "Продолжить воспроизведение",
+  "enableResumeTimeDesc": "Запоминать позицию видео и предлагать продолжить",
+  "enableZoomLabel": "Масштабирование видео",
+  "enableZoomDesc": "Включить масштабирование и панорамирование видеоплеера",
+  "enablePlaylistSearchLabel": "Поиск по плейлисту",
+  "enablePlaylistSearchDesc": "Добавить поиск по плейлисту",
+  "scrollToTopButtonLabel": "Прокрутить вверх",
+  "scrollToTopButtonDesc": "Показывать кнопку прокрутки вверх на страницах",
   "resumePlayback": "Продолжить воспроизведение?",
   "resume": "Продолжить",
   "startOver": "Начать сначала",
@@ -75,6 +87,9 @@
   "subscribers": "Подписчики",
   "views": "Просмотры",
   "videos": "Видео",
+  "info": "Описание",
+  "playlist": "Плейлист",
+  "fetching": "Загрузка",
   "fontFamily": "Шрифт",
   "fontSize": "Размер шрифта",
   "updateInterval": "Интервал обновления",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Поиск в плейлисте \"{playlist}\"...",
+  "searchPlaceholderPlaylistPage": "Поиск в этом плейлисте...",
   "shortTitle": "Краткий заголовок (в одну строку)",
   "emailOptional": "Ваш email (необязательно)",
   "descriptionPlaceholder": "Опишите проблему, шаги для воспроизведения, ожидаемый и фактический результат",
@@ -225,19 +241,43 @@
   "confirmDelete": "Удалить таймкод \"{label}\"?",
   "reloadError": "Ошибка при обновлении таймкодов",
   "cannotEditChapter": "Нельзя редактировать главы YouTube",
-  "youtubeMusicTitle": "YouTube Music",
-  "youtubeMusicDesc": "Расширенные стили и функции для YouTube Music",
-  "musicStylesLabel": "Стили YouTube Music",
-  "musicStylesDesc": "Включить расширенные стили YouTube Music (экспериментально)",
-  "musicEnhancementsLabel": "Улучшения музыки",
-  "musicEnhancementsDesc": "Включить все улучшения YouTube Music",
+  "youtubeMusicTitle": "YouTube Music +",
+  "youtubeMusicDesc": "Расширенные стили и функции для YouTube Music (экспериментально)",
   "immersiveSearchLabel": "Иммерсивный поиск",
   "immersiveSearchDesc": "Центрированный иммерсивный поиск при фокусе",
   "sidebarHoverLabel": "Эффекты боковой панели",
   "sidebarHoverDesc": "Показывать боковую панель при наведении с плавной анимацией",
+  "playerSidebarStylesLabel": "Боковая панель плеера",
+  "playerSidebarStylesDesc": "Улучшить внешний вид и поведение боковой панели плеера",
   "centeredPlayerLabel": "Центрированный плеер",
   "centeredPlayerDesc": "Центрировать плеер с улучшенным оформлением",
+  "playerBarStylesLabel": "Стиль нижней панели",
+  "playerBarStylesDesc": "Улучшить внешний вид нижней панели плеера",
+  "centeredPlayerBarStylesLabel": "Центрирование панели плеера",
+  "centeredPlayerBarStylesDesc": "Центрировать элементы управления на панели плеера",
+  "miniPlayerStylesLabel": "Мини-плеер",
+  "miniPlayerStylesDesc": "Настройки и стили для мини-плеера",
   "scrollToTopLabel": "Кнопка прокрутки вверх",
   "scrollToTopDesc": "Показывать кнопку прокрутки вверх на боковой панели",
-  "musicSettingsSaved": "Настройки YouTube Music сохранены"
+  "musicSettingsSaved": "Настройки YouTube Music сохранены",
+  "zenStylesTitle": "Дзен-стили",
+  "zenStylesDesc": "Улучшенные визуальные стили для более чистого опыта YouTube",
+  "zenStyleThumbnailHoverLabel": "Предпросмотр миниатюры при наведении",
+  "zenStyleThumbnailHoverDesc": "Увеличивать встроенный проигрыватель при наведении",
+  "zenStyleImmersiveSearchLabel": "Иммерсивный поиск",
+  "zenStyleImmersiveSearchDesc": "Центрированная строка поиска при фокусе",
+  "zenStyleHideVoiceSearchLabel": "Скрыть голосовой поиск",
+  "zenStyleHideVoiceSearchDesc": "Убрать кнопку голосового поиска из шапки",
+  "zenStyleTransparentHeaderLabel": "Прозрачная шапка",
+  "zenStyleTransparentHeaderDesc": "Сделать фон верхней панели прозрачным",
+  "zenStyleHideSideGuideLabel": "Скрыть боковую панель",
+  "zenStyleHideSideGuideDesc": "Полностью скрыть боковую панель навигации",
+  "zenStyleCleanSideGuideLabel": "Очистить боковую панель",
+  "zenStyleCleanSideGuideDesc": "Убрать Premium/Спорт/Настройки из боковой панели",
+  "zenStyleFixFeedLayoutLabel": "Исправить макет ленты",
+  "zenStyleFixFeedLayoutDesc": "Улучшить сетку видео на главной странице",
+  "zenStyleBetterCaptionsLabel": "Улучшенные субтитры",
+  "zenStyleBetterCaptionsDesc": "Улучшенный стиль субтитров с размытым фоном",
+  "zenStylePlayerBlurLabel": "Размытие элементов управления плеера",
+  "zenStylePlayerBlurDesc": "Добавить эффект размытия к элементам управления"
 }
