--- a/locales/tr.json
+++ b/locales/tr.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL şablonu ({videoId} veya {videoUrl} kullanın)",
   "saveButton": "Kaydet",
   "resetButton": "Sıfırla",
-  "y2mateSettingsSaved": "Y2Mate ayarları kaydedildi",
-  "y2mateReset": "Y2Mate varsayılana sıfırlandı",
+  "externalDownloaderSettingsSaved": "Dış indirici ayarları kaydedildi",
+  "externalDownloaderReset": "Dış indirici varsayılanlara sıfırlandı",
   "youtubeSettings": "YouTube + Ayarları",
   "takeScreenshot": "Ekran görüntüsü al",
   "screenshotSaved": "Ekran görüntüsü kaydedildi",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Bitiş ekranı önerilerini ve bilgi kartlarını/kanal logosunu kaldır",
   "removedSuffix": " ({n} kaldırıldı)",
   "scrollToTop": "Başa kaydır",
+  "enhancedFeaturesTitle": "Gelişmiş Özellikler",
+  "enhancedFeaturesDesc": "Ek üretkenlik özellikleri ve kullanıcı arayüzü iyileştirmeleri",
+  "enablePlayAllLabel": "Tümünü Oynat Düğmesi",
+  "enablePlayAllDesc": "Oynatma listelerine ve kanal sayfalarına Tümünü Oynat düğmesi ekle",
+  "enableResumeTimeLabel": "Oynatmaya Devam Et",
+  "enableResumeTimeDesc": "Video pozisyonunu hatırla ve devam etmeyi teklif et",
+  "enableZoomLabel": "Video Yakınlaştırma",
+  "enableZoomDesc": "Video oynatıcı için yakınlaştırma ve kaydırma kontrollerini etkinleştir",
+  "enablePlaylistSearchLabel": "Oynatma Listesi Araması",
+  "enablePlaylistSearchDesc": "Oynatma listesi panellerine arama işlevi ekle",
+  "scrollToTopButtonLabel": "Başa Kaydır",
+  "scrollToTopButtonDesc": "Sayfalarda başa kaydır düğmesini göster",
   "resumePlayback": "Oynatmaya devam edilsin mi?",
   "resume": "Devam et",
   "startOver": "Baştan başla",
@@ -76,6 +88,9 @@
   "subscribers": "Aboneler",
   "views": "Görüntülenmeler",
   "videos": "Videolar",
+  "info": "Bilgi",
+  "playlist": "Oynatma Listesi",
+  "fetching": "Alınıyor",
   "fontFamily": "Yazı Tipi",
   "fontSize": "Yazı Boyutu",
   "updateInterval": "Güncelleme Aralığı",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "{playlist} içinde ara...",
+  "searchPlaceholderPlaylistPage": "Bu oynatma listesinde ara...",
   "shortTitle": "Kısa başlık (bir satır)",
   "emailOptional": "E-postanız (isteğe bağlı)",
   "descriptionPlaceholder": "Sorunu, yeniden üretme adımlarını, beklenen ve gerçek durumu açıklayın",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "YouTube bölümleri düzenlenemez",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music için gelişmiş stiller ve özellikler",
-  "musicStylesLabel": "YouTube Music Stilleri",
-  "musicStylesDesc": "Gelişmiş YouTube Music stillerini etkinleştir (deneysel)",
-  "musicEnhancementsLabel": "Müzik Geliştirmeleri",
-  "musicEnhancementsDesc": "Tüm YouTube Music geliştirmelerini etkinleştir",
   "immersiveSearchLabel": "Sürükleyici Arama",
   "immersiveSearchDesc": "Odaklanıldığında ortalanmış sürükleyici arama deneyimi",
   "sidebarHoverLabel": "Kenar Çubuğu Üzerine Gelme Efektleri",
   "sidebarHoverDesc": "Üzerine gelindiğinde yumuşak animasyonlarla kenar çubuğunu göster",
+  "playerSidebarStylesLabel": "Oynatıcı Yan Paneli",
+  "playerSidebarStylesDesc": "Oynatıcı yan panelinin düzenini ve davranışını iyileştir",
+  "playerBarStylesLabel": "Oynatıcı Çubuğu Stili",
+  "playerBarStylesDesc": "Alt oynatıcı çubuğunun görünümünü iyileştir",
+  "centeredPlayerBarStylesLabel": "Ortalanmış Oynatıcı Çubuğu",
+  "centeredPlayerBarStylesDesc": "Oynatıcı çubuğu kontrollerini yeniden konumlandır ve ortala",
+  "miniPlayerStylesLabel": "Mini Oynatıcı",
+  "miniPlayerStylesDesc": "Mini oynatıcı düzeni ince ayarlarını etkinleştir",
   "centeredPlayerLabel": "Ortalanmış Oynatıcı Düzeni",
   "centeredPlayerDesc": "Gelişmiş stil ile oynatıcıyı ortala",
   "scrollToTopLabel": "Yukarı Kaydır Düğmesi",
   "scrollToTopDesc": "Yan panelde yukarı kaydır düğmesini göster",
-  "musicSettingsSaved": "YouTube Music ayarları kaydedildi"
+  "musicSettingsSaved": "YouTube Music ayarları kaydedildi",
+  "zenStylesTitle": "Zen Stilleri",
+  "zenStylesDesc": "Daha temiz bir YouTube deneyimi için geliştirilmiş görsel stiller",
+  "zenStyleThumbnailHoverLabel": "Küçük Resim Üzerine Gelme Önizlemesi",
+  "zenStyleThumbnailHoverDesc": "Üzerine gelindiğinde satır içi önizleme oynatıcıyı büyüt",
+  "zenStyleImmersiveSearchLabel": "몰입형 Arama",
+  "zenStyleImmersiveSearchDesc": "Odaklandığında ortalanmış arama kutusu deneyimi",
+  "zenStyleHideVoiceSearchLabel": "Sesli Aramayı Gizle",
+  "zenStyleHideVoiceSearchDesc": "Başlıktan sesli arama düğmesini kaldır",
+  "zenStyleTransparentHeaderLabel": "Şeffaf Başlık",
+  "zenStyleTransparentHeaderDesc": "Üst başlık arka planını şeffaf yap",
+  "zenStyleHideSideGuideLabel": "Yan Kılavuzu Gizle",
+  "zenStyleHideSideGuideDesc": "Kenar çubuğu kılavuzunu tamamen gizle",
+  "zenStyleCleanSideGuideLabel": "Temiz Yan Kılavuz",
+  "zenStyleCleanSideGuideDesc": "Kenar çubuğundan Premium/Spor/Ayarları kaldır",
+  "zenStyleFixFeedLayoutLabel": "Akış Düzenini Düzelt",
+  "zenStyleFixFeedLayoutDesc": "Ana sayfadaki video ızgara düzenini iyileştir",
+  "zenStyleBetterCaptionsLabel": "Daha İyi Altyazılar",
+  "zenStyleBetterCaptionsDesc": "Bulanık arka planlı geliştirilmiş altyazı stili",
+  "zenStylePlayerBlurLabel": "Oynatıcı Kontrolleri Bulanıklığı",
+  "zenStylePlayerBlurDesc": "Oynatıcı kontrollerine bulanıklık efekti ekle"
 }
