--- a/locales/tw.json
+++ b/locales/tw.json
@@ -44,8 +44,8 @@
   "urlTemplate": "URL 範本（使用 {videoId} 或 {videoUrl}）",
   "saveButton": "儲存",
   "resetButton": "重設",
-  "y2mateSettingsSaved": "Y2Mate 設定已儲存",
-  "y2mateReset": "Y2Mate 已重設為預設值",
+  "externalDownloaderSettingsSaved": "外部下載器設定已儲存",
+  "externalDownloaderReset": "外部下載器已重設為預設值",
   "youtubeSettings": "YouTube + 設定",
   "takeScreenshot": "擷取螢幕截圖",
   "screenshotSaved": "截圖已儲存",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "移除片尾畫面建議和資訊卡片/頻道標誌",
   "removedSuffix": "（已移除 {n} 個）",
   "scrollToTop": "捲動到頂部",
+  "enhancedFeaturesTitle": "進階功能",
+  "enhancedFeaturesDesc": "額外的生產力功能與使用者介面增強",
+  "enablePlayAllLabel": "播放全部按鈕",
+  "enablePlayAllDesc": "在播放清單及頻道頁面新增播放全部按鈕",
+  "enableResumeTimeLabel": "繼續播放",
+  "enableResumeTimeDesc": "記住影片位置並提供繼續播放選項",
+  "enableZoomLabel": "影片縮放",
+  "enableZoomDesc": "為影片播放器啟用縮放與平移控制",
+  "enablePlaylistSearchLabel": "播放清單搜尋",
+  "enablePlaylistSearchDesc": "為播放清單面板新增搜尋功能",
+  "scrollToTopButtonLabel": "返回頂部按鈕",
+  "scrollToTopButtonDesc": "在頁面顯示返回頂部按鈕",
   "resumePlayback": "繼續播放？",
   "resume": "繼續",
   "startOver": "重新開始",
@@ -77,6 +89,9 @@
   "subscribers": "訂閱者",
   "views": "觀看次數",
   "videos": "影片",
+  "info": "資訊",
+  "playlist": "播放清單",
+  "fetching": "載入中...",
   "fontFamily": "字型",
   "fontSize": "字型大小",
   "updateInterval": "更新間隔",
@@ -160,6 +175,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "在 {playlist} 中搜尋...",
+  "searchPlaceholderPlaylistPage": "在此播放清單中搜尋...",
   "shortTitle": "簡短標題（一行）",
   "emailOptional": "您的電子郵件（選填）",
   "descriptionPlaceholder": "描述問題、重現步驟、預期與實際結果",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "無法編輯 YouTube 章節",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "YouTube Music 的增強樣式和功能",
-  "musicStylesLabel": "YouTube Music 樣式",
-  "musicStylesDesc": "啟用增強的 YouTube Music 樣式（實驗性）",
-  "musicEnhancementsLabel": "音樂增強",
-  "musicEnhancementsDesc": "啟用所有 YouTube Music 增強功能",
   "immersiveSearchLabel": "沉浸式搜尋",
   "immersiveSearchDesc": "聚焦時的置中沉浸式搜尋體驗",
   "sidebarHoverLabel": "側邊欄懸停效果",
   "sidebarHoverDesc": "懸停時顯示側邊欄，帶有平滑動畫",
+  "playerSidebarStylesLabel": "播放器側邊欄",
+  "playerSidebarStylesDesc": "增強播放器側邊欄的佈局與行為",
+  "playerBarStylesLabel": "播放器工具列樣式",
+  "playerBarStylesDesc": "改善底部播放器工具列外觀",
+  "centeredPlayerBarStylesLabel": "置中播放器工具列",
+  "centeredPlayerBarStylesDesc": "重新定位並置中播放器工具列控制項",
+  "miniPlayerStylesLabel": "迷你播放器",
+  "miniPlayerStylesDesc": "啟用迷你播放器佈局調整",
   "centeredPlayerLabel": "置中播放器佈局",
   "centeredPlayerDesc": "使用增強樣式置中播放器",
   "scrollToTopLabel": "返回頂部按鈕",
   "scrollToTopDesc": "在側面板顯示返回頂部按鈕",
-  "musicSettingsSaved": "YouTube Music 設定已儲存"
+  "musicSettingsSaved": "YouTube Music 設定已儲存",
+  "zenStylesTitle": "禪意樣式",
+  "zenStylesDesc": "增強的視覺樣式，打造更簡潔的 YouTube 體驗",
+  "zenStyleThumbnailHoverLabel": "縮圖懸停預覽",
+  "zenStyleThumbnailHoverDesc": "懸停時放大內嵌預覽播放器",
+  "zenStyleImmersiveSearchLabel": "沉浸式搜尋",
+  "zenStyleImmersiveSearchDesc": "聚焦時居中搜尋框體驗",
+  "zenStyleHideVoiceSearchLabel": "隱藏語音搜尋",
+  "zenStyleHideVoiceSearchDesc": "從頂部欄移除語音搜尋按鈕",
+  "zenStyleTransparentHeaderLabel": "透明頂欄",
+  "zenStyleTransparentHeaderDesc": "使頂部欄背景透明",
+  "zenStyleHideSideGuideLabel": "隱藏側邊欄",
+  "zenStyleHideSideGuideDesc": "完全隱藏側邊欄導覽",
+  "zenStyleCleanSideGuideLabel": "簡潔側邊欄",
+  "zenStyleCleanSideGuideDesc": "從側邊欄移除會員/體育/設定",
+  "zenStyleFixFeedLayoutLabel": "修復首頁版面配置",
+  "zenStyleFixFeedLayoutDesc": "改進首頁影片網格版面配置",
+  "zenStyleBetterCaptionsLabel": "更好的字幕",
+  "zenStyleBetterCaptionsDesc": "增強字幕樣式，添加模糊背景",
+  "zenStylePlayerBlurLabel": "播放器控制項模糊",
+  "zenStylePlayerBlurDesc": "為播放器控制項添加模糊效果"
 }
