--- a/locales/uk.json
+++ b/locales/uk.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Шаблон URL (використовуйте {videoId} або {videoUrl})",
   "saveButton": "Зберегти",
   "resetButton": "Скинути",
-  "y2mateSettingsSaved": "Налаштування Y2Mate збережено",
-  "y2mateReset": "Y2Mate скинуто до значень за замовчуванням",
+  "externalDownloaderSettingsSaved": "Налаштування зовнішнього завантажувача збережено",
+  "externalDownloaderReset": "Зовнішній завантажувач скинуто до значень за замовчуванням",
   "youtubeSettings": "Налаштування YouTube +",
   "takeScreenshot": "Зробити знімок екрана",
   "screenshotSaved": "Знімок збережено",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Видалити пропозиції кінцевого екрана та інформаційні картки/логотип каналу",
   "removedSuffix": " ({n} видалено)",
   "scrollToTop": "Прокрутити вгору",
+  "enhancedFeaturesTitle": "Розширені функції",
+  "enhancedFeaturesDesc": "Додаткові функції для підвищення продуктивності та покращення інтерфейсу",
+  "enablePlayAllLabel": "Кнопка «Відтворити все»",
+  "enablePlayAllDesc": "Додати кнопку «Відтворити все» до плейлистів та сторінок каналів",
+  "enableResumeTimeLabel": "Відновлення відтворення",
+  "enableResumeTimeDesc": "Запам'ятовувати позицію відео та запропонувати відновлення",
+  "enableZoomLabel": "Зум відео",
+  "enableZoomDesc": "Увімкнути керування збільшенням та панорамуванням для програвача",
+  "enablePlaylistSearchLabel": "Пошук у плейлисті",
+  "enablePlaylistSearchDesc": "Додати пошук у панелях плейлистів",
+  "scrollToTopButtonLabel": "Прокрутити вгору",
+  "scrollToTopButtonDesc": "Показати кнопку прокрутки вгору на сторінках",
   "resumePlayback": "Відновити відтворення?",
   "resume": "Відновити",
   "startOver": "Почати спочатку",
@@ -77,6 +89,9 @@
   "subscribers": "Підписники",
   "views": "Перегляди",
   "videos": "Відео",
+  "info": "Опис",
+  "playlist": "Плейлист",
+  "fetching": "Отримання",
   "fontFamily": "Шрифт",
   "fontSize": "Розмір шрифту",
   "updateInterval": "Інтервал оновлення",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Пошук у {playlist}...",
+  "searchPlaceholderPlaylistPage": "Пошук у цьому плейлісті...",
   "shortTitle": "Короткий заголовок (один рядок)",
   "emailOptional": "Ваша електронна пошта (необов'язково)",
   "descriptionPlaceholder": "Опишіть проблему, кроки для відтворення, очікуване vs фактичне",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Неможливо редагувати розділи YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Покращені стилі та функції для YouTube Music",
-  "musicStylesLabel": "Стилі YouTube Music",
-  "musicStylesDesc": "Увімкнути покращені стилі YouTube Music (експериментально)",
-  "musicEnhancementsLabel": "Покращення Music",
-  "musicEnhancementsDesc": "Увімкнути всі покращення YouTube Music",
   "immersiveSearchLabel": "Імерсивний пошук",
   "immersiveSearchDesc": "Центрований імерсивний досвід пошуку при фокусі",
   "sidebarHoverLabel": "Ефекти наведення на бічну панель",
   "sidebarHoverDesc": "Показати бічну панель при наведенні з плавними анімаціями",
+  "playerSidebarStylesLabel": "Бічна панель програвача",
+  "playerSidebarStylesDesc": "Покращити макет і поведінку бічної панелі програвача",
+  "playerBarStylesLabel": "Стилізація панелі програвача",
+  "playerBarStylesDesc": "Покращити зовнішній вигляд нижньої панелі програвача",
+  "centeredPlayerBarStylesLabel": "Центрована панель програвача",
+  "centeredPlayerBarStylesDesc": "Перемістити та центрувати елементи керування панеллю програвача",
+  "miniPlayerStylesLabel": "Мініпрогравач",
+  "miniPlayerStylesDesc": "Увімкнути налаштування макету мініпрогравача",
   "centeredPlayerLabel": "Центроване розташування програвача",
   "centeredPlayerDesc": "Центрувати програвач з покращеним стилем",
   "scrollToTopLabel": "Кнопка прокрутки вгору",
   "scrollToTopDesc": "Показати кнопку прокрутки вгору на бічній панелі",
-  "musicSettingsSaved": "Налаштування YouTube Music збережено"
+  "musicSettingsSaved": "Налаштування YouTube Music збережено",
+  "zenStylesTitle": "Дзен-стилі",
+  "zenStylesDesc": "Покращені візуальні стилі для чистішого досвіду YouTube",
+  "zenStyleThumbnailHoverLabel": "Попередній перегляд мініатюри при наведенні",
+  "zenStyleThumbnailHoverDesc": "Збільшити вбудований програвач попереднього перегляду при наведенні",
+  "zenStyleImmersiveSearchLabel": "Занурювальний пошук",
+  "zenStyleImmersiveSearchDesc": "Центроване вікно пошуку при фокусі",
+  "zenStyleHideVoiceSearchLabel": "Сховати голосовий пошук",
+  "zenStyleHideVoiceSearchDesc": "Видалити кнопку голосового пошуку з заголовка",
+  "zenStyleTransparentHeaderLabel": "Прозорий заголовок",
+  "zenStyleTransparentHeaderDesc": "Зробити фон верхнього заголовка прозорим",
+  "zenStyleHideSideGuideLabel": "Сховати бічну панель",
+  "zenStyleHideSideGuideDesc": "Повністю сховати бічну панель",
+  "zenStyleCleanSideGuideLabel": "Чиста бічна панель",
+  "zenStyleCleanSideGuideDesc": "Видалити Преміум/Спорт/Налаштування з бічної панелі",
+  "zenStyleFixFeedLayoutLabel": "Виправити макет стрічки",
+  "zenStyleFixFeedLayoutDesc": "Покращити макет сітки відео на головній сторінці",
+  "zenStyleBetterCaptionsLabel": "Кращі субтитри",
+  "zenStyleBetterCaptionsDesc": "Покращене оформлення субтитрів з розмитим фоном",
+  "zenStylePlayerBlurLabel": "Розмиття елементів керування програвачем",
+  "zenStylePlayerBlurDesc": "Додати ефект розмиття до елементів керування програвачем"
 }
