--- a/locales/vi.json
+++ b/locales/vi.json
@@ -44,8 +44,8 @@
   "urlTemplate": "Mẫu URL (sử dụng {videoId} hoặc {videoUrl})",
   "saveButton": "Lưu",
   "resetButton": "Đặt lại",
-  "y2mateSettingsSaved": "Đã lưu cài đặt Y2Mate",
-  "y2mateReset": "Đã đặt lại Y2Mate về mặc định",
+  "externalDownloaderSettingsSaved": "Đã lưu cài đặt trình tải xuống bên ngoài",
+  "externalDownloaderReset": "Đặt lại trình tải xuống bên ngoài về mặc định",
   "youtubeSettings": "Cài đặt YouTube +",
   "takeScreenshot": "Chụp màn hình",
   "screenshotSaved": "Đã lưu ảnh chụp màn hình",
@@ -57,6 +57,18 @@
   "endscreenHideDesc": "Xóa gợi ý màn hình kết thúc và thẻ thông tin/logo kênh",
   "removedSuffix": " ({n} đã xóa)",
   "scrollToTop": "Cuộn lên đầu",
+  "enhancedFeaturesTitle": "Tính năng nâng cao",
+  "enhancedFeaturesDesc": "Các tính năng tăng năng suất bổ sung và cải tiến giao diện người dùng",
+  "enablePlayAllLabel": "Nút Phát Tất Cả",
+  "enablePlayAllDesc": "Thêm nút Phát Tất Cả vào danh sách phát và trang kênh",
+  "enableResumeTimeLabel": "Tiếp tục phát",
+  "enableResumeTimeDesc": "Ghi nhớ vị trí video và đề xuất tiếp tục phát",
+  "enableZoomLabel": "Phóng/Thu video",
+  "enableZoomDesc": "Kích hoạt điều khiển phóng to và di chuyển cho trình phát video",
+  "enablePlaylistSearchLabel": "Tìm kiếm danh sách phát",
+  "enablePlaylistSearchDesc": "Thêm chức năng tìm kiếm vào bảng danh sách phát",
+  "scrollToTopButtonLabel": "Cuộn lên đầu",
+  "scrollToTopButtonDesc": "Hiển thị nút cuộn lên đầu trên các trang",
   "resumePlayback": "Tiếp tục phát?",
   "resume": "Tiếp tục",
   "startOver": "Bắt đầu lại",
@@ -77,6 +89,9 @@
   "subscribers": "Người đăng ký",
   "views": "Lượt xem",
   "videos": "Video",
+  "info": "Mô tả",
+  "playlist": "Danh sách phát",
+  "fetching": "Đang tải...",
   "fontFamily": "Phông chữ",
   "fontSize": "Kích thước phông chữ",
   "updateInterval": "Khoảng cập nhật",
@@ -161,6 +176,7 @@
   "alt": "Alt",
   "shift": "Shift",
   "searchPlaceholder": "Tìm kiếm trong {playlist}...",
+  "searchPlaceholderPlaylistPage": "Tim kiem trong danh sach phat nay...",
   "shortTitle": "Tiêu đề ngắn (một dòng)",
   "emailOptional": "Email của bạn (tùy chọn)",
   "descriptionPlaceholder": "Mô tả vấn đề, các bước tái hiện, mong đợi vs thực tế",
@@ -227,17 +243,41 @@
   "cannotEditChapter": "Không thể chỉnh sửa chương YouTube",
   "youtubeMusicTitle": "YouTube Music",
   "youtubeMusicDesc": "Kiểu dáng và tính năng nâng cao cho YouTube Music",
-  "musicStylesLabel": "Kiểu YouTube Music",
-  "musicStylesDesc": "Bật kiểu YouTube Music nâng cao (thử nghiệm)",
-  "musicEnhancementsLabel": "Cải tiến Music",
-  "musicEnhancementsDesc": "Bật tất cả cải tiến YouTube Music",
   "immersiveSearchLabel": "Tìm kiếm đắm chìm",
   "immersiveSearchDesc": "Trải nghiệm tìm kiếm đắm chìm tập trung khi được chọn",
   "sidebarHoverLabel": "Hiệu ứng di chuột thanh bên",
   "sidebarHoverDesc": "Hiển thị thanh bên khi di chuột với hiệu ứng mượt mà",
+  "playerSidebarStylesLabel": "Bảng bên của trình phát",
+  "playerSidebarStylesDesc": "Cải thiện bố cục và hành vi của bảng bên trình phát",
+  "playerBarStylesLabel": "Kiểu thanh trình phát",
+  "playerBarStylesDesc": "Cải thiện giao diện thanh điều khiển ở cuối trình phát",
+  "centeredPlayerBarStylesLabel": "Thanh trình phát căn giữa",
+  "centeredPlayerBarStylesDesc": "Định vị lại và căn giữa điều khiển thanh trình phát",
+  "miniPlayerStylesLabel": "Trình phát thu nhỏ",
+  "miniPlayerStylesDesc": "Bật tinh chỉnh bố cục cho trình phát thu nhỏ",
   "centeredPlayerLabel": "Bố cục trình phát ở giữa",
   "centeredPlayerDesc": "Căn giữa trình phát với kiểu dáng nâng cao",
   "scrollToTopLabel": "Nút cuộn lên đầu",
   "scrollToTopDesc": "Hiển thị nút cuộn lên đầu trong bảng bên",
-  "musicSettingsSaved": "Đã lưu cài đặt YouTube Music"
+  "musicSettingsSaved": "Đã lưu cài đặt YouTube Music",
+  "zenStylesTitle": "Phong Cách Zen",
+  "zenStylesDesc": "Phong cách hình ảnh nâng cao cho trải nghiệm YouTube sạch hơn",
+  "zenStyleThumbnailHoverLabel": "Xem Trước Hình Thu Nhỏ Khi Di Chuột",
+  "zenStyleThumbnailHoverDesc": "Phóng to trình phát xem trước nội tuyến khi di chuột",
+  "zenStyleImmersiveSearchLabel": "Tìm Kiếm Nhập Vai",
+  "zenStyleImmersiveSearchDesc": "Trải nghiệm hộp tìm kiếm căn giữa khi được tập trung",
+  "zenStyleHideVoiceSearchLabel": "Ẩn Tìm Kiếm Giọng Nói",
+  "zenStyleHideVoiceSearchDesc": "Xóa nút tìm kiếm giọng nói khỏi tiêu đề",
+  "zenStyleTransparentHeaderLabel": "Tiêu Đề Trong Suốt",
+  "zenStyleTransparentHeaderDesc": "Làm cho nền tiêu đề trên cùng trong suốt",
+  "zenStyleHideSideGuideLabel": "Ẩn Hướng Dẫn Bên",
+  "zenStyleHideSideGuideDesc": "Ẩn hoàn toàn hướng dẫn thanh bên",
+  "zenStyleCleanSideGuideLabel": "Hướng Dẫn Bên Sạch",
+  "zenStyleCleanSideGuideDesc": "Xóa Premium/Thể thao/Cài đặt khỏi thanh bên",
+  "zenStyleFixFeedLayoutLabel": "Sửa Bố Cục Nguồn Cấp",
+  "zenStyleFixFeedLayoutDesc": "Cải thiện bố cục lưới video trên trang chủ",
+  "zenStyleBetterCaptionsLabel": "Phụ Đề Tốt Hơn",
+  "zenStyleBetterCaptionsDesc": "Kiểu phụ đề nâng cao với nền mờ",
+  "zenStylePlayerBlurLabel": "Làm Mờ Điều Khiển Trình Phát",
+  "zenStylePlayerBlurDesc": "Thêm hiệu ứng làm mờ cho điều khiển trình phát"
 }
